--- a/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
+++ b/src/components/alg/alg-conspect/stepik/pages/elem-stepik-01.html
@@ -6244,7 +6244,7 @@ struct node* merge(struct node* p1, struct node* p2) {
   <div class="anchor" id="p4.4"></div>
   <h3>4.4 Структура: конструкторы и деструкторы</h3>
 
-  <p>На прошлом уроке мы поговорили о структурах, их полях и методах, работе с ними. В этом гуроке поговорим о конструкторах и деструкторах - важнейших составляющих структур.</p>
+  <p>На прошлом уроке мы поговорили о структурах, их полях и методах, работе с ними. В этом уроке поговорим о конструкторах и деструкторах - важнейших составляющих структур.</p>
   <p><strong>Конструктор</strong> это метод, который вызывается при создании структуры. Конструктор отличается от других методов класса только двумя вещами:</p>
   <ol>
     <li>Называется этот метод также как и сам класс</li>
@@ -6334,7 +6334,7 @@ int main() {
 }
 </pre>
 
-  <p>В первом способе мы видим слово <strong>this</strong> - это ключевое слово языка C++. Внутри экземпляра класса this является указателем на этот класс. this можно использовать не только в конструкторе, но и других методах. В случае пересекающихся имен, компилятор отличает их очень просто. Приоритет имеет переменная, объявленная на более глубоком уровне.</p>
+  <p>В первом способе мы видим слово <strong>this</strong> - это ключевое слово языка C++. Внутри экземпляра класса <strong>this</strong> является указателем на этот класс. <strong>this</strong> можно использовать не только в конструкторе, но и других методах. В случае пересекающихся имен, компилятор отличает их очень просто. Приоритет имеет переменная, объявленная на более глубоком уровне.</p>
   <p>Здесь переменная days объявлена сначала в самой структуре, а потом внутри структуры как параметр конструктора. Таким образом, параметр конструктора оказался глубже. Поэтому в конструкторе под переменной days подразумевается именно параметр конструктора.</p>
   <p>Чтобы обратиться к более высокой версии days, мы используем this. То есть обращаемся к нашему классу по указателю this.</p>
 
@@ -6519,6 +6519,23 @@ int main() {
     <h4>Пример</h4>
     <code>1 1 4 6</code>
     <code>3 5</code>
+<pre>
+struct rectangle {
+  int w, h;
+  rectangle(int x1, int y1, int x2, int y2) {
+    if (x2 >= x1) {
+      w = x2 - x1;
+    } else {
+      w = x1 - x2;
+    }
+    if (y2 >= y1) {
+      h = y2 - y1;
+    } else {
+      h = y1 - y2;
+    }
+  }
+};
+</pre>
   </details>
 
   <details>
@@ -6535,6 +6552,22 @@ int main() {
     <h4>Пример</h4>
     <code>3 4</code>
     <code>Last spell: 7</code>
+<pre>
+struct wizard {
+  int a, b; // поля структуры
+
+  // конструктор
+  wizard(int x, int y) {
+    a = x;
+    b = y;
+  }
+
+  // деструктор
+  ~wizard() {
+    cout &lt;&lt; a + b;
+  }
+};
+</pre>
   </details>
 
   <details>
@@ -6551,6 +6584,48 @@ int main() {
     </ol>
 
     <p>Гарантируется, что все запросы корректны - то есть вам никогда не нужно будет удалять элемент из пустой структуры, обращаться к i-у элементу, если в структуре меньше, чем i элементов. Также гарантируется, что максимальное количество элементов, которое когда либо может оказаться в вашей структуре не превосходит 10⁵.</p>
+
+<pre>
+struct vector {
+  int* A;
+  int sizeA;
+
+  // конструктор одной переменной
+  vector(int x) {
+    sizeA = x;
+    A = new int[100000];
+    for (int i = 0; i &lt; sizeA; i++) {
+      A[i] = 0;
+    }
+  }
+
+  // конструктор двух переменных
+  vector(int x, int val) {
+    sizeA = x;
+    A = new int[100000];
+    for (int i = 0; i &lt; sizeA; i++) {
+      A[i] = val;
+    }
+  }
+
+  void push_back(int val) {
+    A[sizeA] = val;
+    sizeA++;
+  }
+
+  void pop_back() {
+    sizeA--;
+  }
+
+  int get(int i) {
+    return A[i];
+  }
+
+  int size() {
+    return sizeA;
+  }
+};
+</pre>
   </details>
 </article>
 
@@ -6748,5 +6823,9 @@ public:
   <p>Однако на олимпиаде, вам нужно лишь написать программу максимум в пару сотен строк, которая отработает на тестах, получит окей и больше окажется никому не нужна.</p>
   <p>Для олимпиадных целей, заморачиваться о приватности и использовать слово class видится абсолютно неосмысленным.</p>
   <p>Итак, мы поняли как реализовывать структуры и разобрали примеры.</p>
+
+  <details>
+    <summary>Задача 1. Плыть по течению времени</summary>
+  </details>
 </article>
 
