--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp18.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp18.html
@@ -88,33 +88,35 @@ while (tmp > 0) {
   <div class="anchor" id="p2"></div>
   <h3>Битовые операции</h3>
 
-  <p>Рассмотрим операции & (битовое И) и | (битовое ИЛИ) на примере двух чисел a = 3, b = 5</p>
-<pre>
-a = 3 = ... 0 0 1 1
-b = 5 = ... 0 1 0 1
+  <p>Рассмотрим битовые операции на примере двух чисел a = 3, b = 5</p>
+  <code>a = 3 = ... 0 0 1 1</code>
+  <code>b = 5 = ... 0 1 0 1</code>
 
-a & b = ... 0 0 0 1 = 1
-a | b = ... 0 1 1 1 = 7
-</pre>
+  <p>Операция & (битовое И). Возвращает 1 если оба бита равны 1, возвращает 0 в других случаях.</p>
+  <code>a & b = ... 0 0 0 1 = 1</code>
 
-  <p>Рассмотрим операцию ^ (XOR, исключающее ИЛИ). Возвращает 1 если различны, возвращает 0 если одинаковые.</p>
-<pre>
-a = 3 = ... 0 0 1 1
-b = 5 = ... 0 1 0 1
+  <p>Операция | (битовое ИЛИ). Возвращает 0 если оба бита равны 0, возвращает 1 в других случаях.</p>
+  <code>a | b = ... 0 1 1 1 = 7</code>
 
-a ^ b = ... 0 1 1 0 = 6
-</pre>
+  <p>Операция ^ (XOR, исключающее ИЛИ). Возвращает 1 если биты различны, возвращает 0 если одинаковые.</p>
+  <code>a ^ b = ... 0 1 1 0 = 6</code>
 
-  <p>Рассмотрим операцию ~ (порязрядная инверсия). Возвращает 1 если бит равен 0, возвращает 0 если бит равен 1.</p>
+  <p>Операция ~ (порязрядная инверсия). Возвращает 1 если бит равен 0, возвращает 0 если бит равен 1.</p>
 <pre>
 a = 3 = ... 0 0 0 1 1
-b = 5 = ... 0 0 1 0 1
-c = 9 = ... 0 1 0 0 1
-
 ~ a   = ... 1 1 1 0 0 = -4
+</pre>
+
+<pre>
+b = 5 = ... 0 0 1 0 1
 ~ b   = ... 1 1 0 0 1 = -7
+</pre>
+
+<pre>
+c = 9 = ... 0 1 0 0 1
 ~ c   = ... 1 0 1 1 0 = -10
 </pre>
+
   <p>Числа со знаком, имеющие в старшем разряде 1, считаются отрицательными</p>
 
   <p>Рассмотрим операцию &lt;&lt; (порязрядный сдвиг влево). Освободившиеся разряды справа заполняются нулями.</p>
@@ -124,7 +126,7 @@ a = 3   = ... 0 0 0 1 1
 
 a &lt;&lt; 2  = ... 0 1 1 0 0 = 12
 </pre>
-  <p>Рассмотрим операцию &gt;&gt; (порязрядный сдвиг вправо). Освободившиеся разряды справа заполняются.</p>
+  <p>Рассмотрим операцию &gt;&gt; (порязрядный сдвиг вправо). Освободившиеся разряды слева заполняются нулями.</p>
   <code>a &gt;&gt; k это a / 2ᵏ</code>
 <pre>
 b = 5   = ... 0 0 1 0 1
@@ -135,6 +137,31 @@ b &gt;&gt; 2  = ...0 0 0 0 1 = 1
   <p>Операции сдвиг влево и вправо работают быстрее чем равные им умножение и деление. Например, нахождение середины в двоичном поиске</p>
   <code>mid = (left + right) / 2;</code>
   <code>mid = (left + right) >> 1;</code>
+
+  <h4>Задача на операцию XOR</h4>
+  <p>Есть последовательность, состоящая из n чисел, причем n это нечетное число. Все числа в последовательности содержатся 2 раза, кроме одного. Найти число, которое встречается толко один раз</p>
+  <p>Решение. Если есть число A, то верно A XOR A = 0, поскольку соответствующие биты двух одинаковых чисел будут одинаковые. Выполним XOR на всех числах последовательности, в результате все парные числа дадут 0 и в ответе останется искомое число</p>
+<pre>
+int res = 0;
+int a;
+for (int i = 0; i &lt; n; i++) {
+  cin >> a;
+  res = res ^ a;
+}
+cout &lt;&lt; res;
+</pre>
+
+  <h4>Задача на двоичный сдвиг вправо</h4>
+  <p>Есть целое число A. Необходимо найти остаток от деления числа A на число B, причем B = 2<sup>k</sup>.</p>
+  <p>Пример. k = 5. Если представить A и B в двоичном виде, то A % B это пять последних цифр числа A</p>
+  <code>A = 001011010111</code>
+  <code>B = 000000100000</code>
+  <code>A % B = 000000010111</code>
+  <p>Теперь нам нужно достать 5 последних бит числа A. Пусть C = B - 1</p>
+  <code>C = 000000011111</code>
+  <p>Тогда A % B = A & C</p>
+  <code>A & C = 000000010111</code>
+
 </article>
 
 
@@ -153,8 +180,9 @@ for (int i = 0; i &lt; (1 &lt;&lt; n); i++) {
   }
 }
 </pre>
-  <p>Этот алгоритм хорош при небольших n.</p>
-  <code>При n = 20. 2ⁿ = 2²⁰ ≈ 10⁶. 20 * 10⁶ = 2 * 10⁷</code>
+  <p>Этот алгоритм хорош при небольших n. При n = 20.</p>
+  <code>2ⁿ = 2²⁰ ≈ 10⁶</code>
+  <code>20 * 10⁶ = 2 * 10⁷</code>
 </article>
 
 
@@ -235,6 +263,29 @@ int main() {
     <summary>Пример</summary>
     <code>5 2</code>
     <code>1</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int a; // число
+  int i; // номер бита
+  cin >> a >> i;
+
+  // решение
+  int mask = 1 &lt;&lt; i;
+  int res = a & (~mask);
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
   </details>
 </article>
 
@@ -427,7 +478,6 @@ int main() {
     <p>Пришли к тому что было в самом начале. Видим закономерность, что числа повторяются бесконечно. Повторяются первые три элемента f(0), f(1), f(2).</p>
 <pre>
 #include &lt;iostream&gt;
-#include &lt;iomanip&gt;
 
 using namespace std;
 
@@ -436,16 +486,19 @@ int main() {
   ios::sync_with_stdio(0);
   cin.tie(0);
 
-  // ввод данных
+  // число тестов
   int t;
   cin >> t;
 
   while (t--) {
-    int a, b, n;
+    // ввод данных
+    int a; // первое число
+    int b; // второе число
+    int n; // номер числа, которое нужно найти
     cin >> a >> b >> n;
 
     // решение
-    int c = a ^ b;
+    int c = a ^ b; // третье число
 
     // периодическия последовательность
     // a, b, c, a, b, c ...
@@ -593,7 +646,7 @@ int main() {
 
   <details>
     <summary>Решение</summary>
-    <p>Это задача на полный перебор. Нужно перебрать все возможные комбинации распределения весов на разные гири.</p>
+    <p>Это задача на полный перебор. Нужно перебрать все возможные комбинации распределения весов на разные гири. Сложность O(2ⁿ). Чтобы решение зашло за 1 секунду, должно быть n ≤ 20.</p>
 <pre>
 #include &lt;iostream&gt;
 #include &lt;iomanip&gt;
@@ -618,14 +671,25 @@ int main() {
   vector&lt;int&gt; Mask(n);
   long long res = 1e9; // разница веса на весах
   long long sum_left, sum_right;
+
+  // переберем все возможные варианты
+  // распределения гирь от 0 до 2 в степени n
   for (int i = 0; i &lt; (1 &lt;&lt; n); i++) {
     int mask = i;
-    sum_left = 0;
-    sum_right = 0;
+
+    // для каждого варианта заполним вектор масок
+    // в маске 0 означает что гирька идет в левую кучку
+    // 1 означает что гирька идет в правую кучку
     for (int j = 0; j &lt; n; j++) {
-      Mask[j] = mask % 2; // a & 1
-      mask /= 2;
+      Mask[j] = mask % 2; // mask & 1
+      mask /= 2; // mask >> 1
     }
+
+    sum_left = 0; // начальный вес левой кучки
+    sum_right = 0; // начальный вес правой кучки
+
+    // соберем суммы весов гирек
+    // в левой и правой кучке
     for (int j = 0; j &lt; n; j++) {
       if (Mask[j] == 0) {
         sum_left += A[j];
@@ -633,6 +697,9 @@ int main() {
         sum_right += A[j];
       }
     }
+
+    // обновляем результат
+    // наша цель - собрать кучки с минимальной разницей
     if (abs(sum_left - sum_right) &lt; res) {
       res = abs(sum_left - sum_right);
     }
@@ -947,7 +1014,6 @@ TAK
     <p>Требуется поменять местами два бита в первом числе. Если в первом числе менять местами биты, в которых 1, то побитовое ИЛИ a | b не изменится. Если в первом числе менять местами биты, значения которых равно 1 во втором числе, также не изменит результат. Остается только два варианта. Первый: меняем местами биты с 0 и 1 в первом числе, те же биты во втором числе так же равны 0 и 1. Второй: меняем местами биты с 0 и 1 в первом числе, те же биты во втором числе равны 1 и 0.</p>
 <pre>
 #include &lt;iostream&gt;
-#include &lt;iomanip&gt;
 
 using namespace std;
 
@@ -957,16 +1023,19 @@ int main() {
   cin.tie(0);
 
   // ввод данных
-  int n;
+  int n; // число бит в числе
   cin >> n;
-  string s1, s2;
+  string s1, s2; // два числа в двоичной системе
   cin >> s1 >> s2;
 
   // решение
-  long long cnt00 = 0;
-  long long cnt01 = 0;
-  long long cnt10 = 0;
-  long long cnt11 = 0;
+
+  // подсчитаем число бит, в которых ...
+  long long cnt00 = 0; // .. в первой строке 0, во второй 0
+  long long cnt01 = 0; // .. в первой строке 0, во второй 1
+  long long cnt10 = 0; // .. в первой строке 1, во второй 0
+  long long cnt11 = 0; // .. в первой строке 1, во второй 1
+
   for (int i = 0; i &lt; s1.size(); i++) {
     if (s1[i] == '0' && s2[i] == '0') {
       cnt00++;
@@ -981,6 +1050,7 @@ int main() {
       cnt11++;
     }
   }
+
   long long res = cnt00 * cnt11 + cnt01 * cnt10 + cnt00 * cnt10;
 
   // вывод результата
