--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp24.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp24.html
@@ -311,8 +311,9 @@ void generate_permutation_num(
   <h4>Выходные данные</h4>
   <p>Выведите в лексикографическом порядке перестановки чисел от 1 до N длины N по одной в каждой строке.</p>
 
-  <h4>Пример</h4>
-  <code>3</code>
+  <details>
+    <summary>Пример</summary>
+    <code>3</code>
 <pre>
 1 2 3
 1 3 2
@@ -321,6 +322,7 @@ void generate_permutation_num(
 3 1 2
 3 2 1
 </pre>
+  </details>
 </article>
 
 
@@ -340,8 +342,10 @@ void generate_permutation_num(
   <h4>Выходные данные</h4>
   <p>Выведите все требуемые цепочки в лексикографическом порядке - по одной на строке. Никакая цепочка не должна встречаться более одного раза.</p>
 
-  <h4>Пример 1</h4>
-  <code>2 3</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2 3</code>
 <pre>
 1 1
 1 2
@@ -354,9 +358,10 @@ void generate_permutation_num(
 3 3
 </pre>
 
-  <h4>Пример 2</h4>
-  <code>1 1</code>
-  <code>1</code>
+    <h4>Пример 2</h4>
+    <code>1 1</code>
+    <code>1</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -417,14 +422,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Необходимо вывести все строки из нулей и единиц длины N, содержащие ровно K единиц, в лексикографическом порядке. Гарантируется, что размер ответа не превышает 10 МБайт.</p>
 
-  <h4>Пример</h4>
-  <code>4 1</code>
+  <details>
+    <summary>Пример</summary>
+    <code>4 1</code>
 <pre>
 0001
 0010
 0100
 1000
 </pre>
+  </details>
 </article>
 
 
@@ -444,15 +451,17 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите все разбиения числа n на слагаемые в требуемом порядке, по одному в строке.</p>
 
-  <h4>Пример 1</h4>
-  <code>2</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2</code>
 <pre>
 2
 1+1
 </pre>
 
-  <h4>Пример 1</h4>
-  <code>4</code>
+    <h4>Пример 1</h4>
+    <code>4</code>
 <pre>
 4
 3+1
@@ -460,6 +469,7 @@ int main() {
 2+1+1
 1+1+1+1
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -509,7 +519,8 @@ int main() {
   <p>Выходной файл choose.out</p>
   <p>Во входном файле заданы числа n и k (1 ≤ k ≤ n ≤ 16). Выведите в выходной файл все сочетания по k из чисел от 1 до n в лексикографическом порядке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4 2
 </pre>
@@ -521,6 +532,7 @@ int main() {
 2 4
 3 4
 </pre>
+  </details>
 </article>
 
 
@@ -539,19 +551,22 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите «No solution», если такой результат получить невозможно, иначе выведите получившееся равенство. Если решение не единственное, выведите любое.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 10
 15 25 30
 </pre>
-  <code>15+25-30=10</code>
+    <code>15+25-30=10</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2 100
 10 10
 </pre>
-  <code>No solution</code>
+    <code>No solution</code>
+  </details>
 </article>
 
 
@@ -571,15 +586,17 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите всевозможные правильные скобочные выражения по одному в каждой строке в произвольном порядке.</p>
 
-  <h4>Пример 1</h4>
-  <code>2</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2</code>
 <pre>
 ()
 []
 </pre>
 
-  <h4>Пример 2</h4>
-  <code>4</code>
+    <h4>Пример 2</h4>
+    <code>4</code>
 <pre>
 (())
 ([])
@@ -590,6 +607,7 @@ int main() {
 []()
 [][]
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -682,7 +700,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите искомые арифметические прогрессии, по одной на строке. Прогрессии можно располагать в любом порядке. Каждая прогрессия должна содержать хотя бы одно число. Если решения не существует, то выведите «No solution» (без кавычек) в единственную строку выходного файла. Если решений несколько, выведите любое из них.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 6
 4 1 2 7 3 10
@@ -692,7 +712,7 @@ int main() {
 4 7 10
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 1 2 3 -2 -7
@@ -701,7 +721,8 @@ int main() {
 1 2 3
 -2 -7
 </pre>
-  <p>Во втором примере возможен другой вариант ответа (число 3 может быть отнесено во вторую прогрессию): 1, 2 и 3, -2, -7.</p>
+    <p>Во втором примере возможен другой вариант ответа (число 3 может быть отнесено во вторую прогрессию): 1, 2 и 3, -2, -7.</p>
+  </details>
 </article>
 
 
@@ -723,7 +744,9 @@ int main() {
 
   <p>Если искомого разбиения не существует, первая строка должна содержать слово «NO» (без кавычек), после которого ничего выводить не нужно.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 0 0
 10 11
@@ -740,7 +763,7 @@ YES
 1 2 3 4
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 0 0
 1 1
@@ -755,7 +778,7 @@ YES
 NO
 </pre>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 0 0
 4 4
@@ -771,7 +794,8 @@ YES
 1 2 3 4
 5 6 7 8
 </pre>
-  <p>Обратите внимание на третий пример: стороны фигур не обязательно должны быть параллельны осям координат.</p>
+    <p>Обратите внимание на третий пример: стороны фигур не обязательно должны быть параллельны осям координат.</p>
+  </details>
 </article>
 
 
@@ -799,32 +823,35 @@ YES
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите количество вариантов трудоустройства студентов с учетом их пожеланий.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2
 1 1 1
 1 1 1
 1 1 1
 </pre>
-  <code>6</code>
+    <code>6</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2
 1 1 0
 0 1 1
 0 0 1
 </pre>
-  <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 2
 1 1 0
 0 1 0
 1 0 0
 </pre>
-  <code>0</code>
+    <code>0</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -902,7 +929,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В выходной файл выведите все сочетания из n элементов по k в антилексикографическом порядке, по одному сочетанию на строку.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3 2
 </pre>
@@ -911,6 +939,7 @@ int main() {
 3 1
 2 1
 </pre>
+  </details>
 </article>
 
 
@@ -932,7 +961,9 @@ int main() {
 
   <p>Если без сдачи не обойтись, то выведите одно число 0. Если же у Волшебного человечка не хватит денег, чтобы заплатить указанную сумму, выведите одно число -1 (минус один).</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5 2
 1 2
@@ -942,7 +973,7 @@ int main() {
 1 2 2
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 7 2
 1 2
@@ -951,7 +982,7 @@ int main() {
 -1
 </pre>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 5 2
 3 4
@@ -959,6 +990,7 @@ int main() {
 <pre>
 0
 </pre>
+  </details>
 </article>
 
 
@@ -980,9 +1012,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число - ответ на задачу.</p>
 
-  <h4>Пример</h4>
-  <code>8</code>
-  <code>92</code>
+  <details>
+    <summary>Пример</summary>
+    <code>8</code>
+    <code>92</code>
+  </details>
 </article>
 
 
@@ -1014,7 +1048,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора тестовых данных выведите ответ на него: n целых чисел p1, p2, …, pn (1 ≤ pi ≤ n), представляющих собой изначальную перестановку. Гарантируется, что ответ существует и единственен.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 2
@@ -1035,6 +1070,7 @@ int main() {
 1 2 3
 2 3 4 1
 </pre>
+  </details>
 </article>
 
 
@@ -1064,7 +1100,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите минимальное значение k, которое позволяет получить строку, отсортированную по алфавиту, с помощью операции, описанной выше.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 3
@@ -1082,13 +1119,14 @@ dcba
 0
 4
 </pre>
-  <p>В первом наборе входных данных мы можем выбрать k=2 символа "_ol" и переставить их как "_lo" (так что результирующая строка будет "llo"). Невозможно отсортировать строку, выбирая строго менее 2 символов.</p>
+    <p>В первом наборе входных данных мы можем выбрать k=2 символа "_ol" и переставить их как "_lo" (так что результирующая строка будет "llo"). Невозможно отсортировать строку, выбирая строго менее 2 символов.</p>
 
-  <p>Во втором наборе входных данных одним из возможных способов сортировки s является рассмотрение k=6 символов "_o__force_" и перестановка их как "_c__efoor_" (так что результирующая строка будет "ccdeefoors"). Можно показать, что невозможно отсортировать строку, выбирая строго меньше 6 символов.</p>
+    <p>Во втором наборе входных данных одним из возможных способов сортировки s является рассмотрение k=6 символов "_o__force_" и перестановка их как "_c__efoor_" (так что результирующая строка будет "ccdeefoors"). Можно показать, что невозможно отсортировать строку, выбирая строго меньше 6 символов.</p>
 
-  <p>В третьем наборе входных данных, строка s уже отсортирована (поэтому мы можем выбрать k=0 символов).</p>
+    <p>В третьем наборе входных данных, строка s уже отсортирована (поэтому мы можем выбрать k=0 символов).</p>
 
-  <p>В четвертом наборе входных данных мы можем выбрать все k=4 символов "dcba" и перевернуть всю строку (так что результирующая строка будет "abcd").</p>
+    <p>В четвертом наборе входных данных мы можем выбрать все k=4 символов "dcba" и перевернуть всю строку (так что результирующая строка будет "abcd").</p>
+  </details>
 </article>
 
 
@@ -1130,7 +1168,8 @@ dcba
   <h4>Выходные данные</h4>
   <p>Для каждого примера выведите ответ в отдельной строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 1
@@ -1144,11 +1183,12 @@ dcba
 830455698
 890287984
 </pre>
-  <p>n=1, существует только одна перестановка, удовлетворяющая условию: [1,2].</p>
+    <p>n=1, существует только одна перестановка, удовлетворяющая условию: [1,2].</p>
 
-  <p>В перестановке [1,2], p1 &lt; p2, только i = 1 подходит под условие. Так как 1 ≥ n, Эта перестановка будет посчитана. В перестановке [2,1], p1 > p2. Так как 0 &lt; n, эта перестановка не будет посчитана.</p>
+    <p>В перестановке [1,2], p1 &lt; p2, только i = 1 подходит под условие. Так как 1 ≥ n, Эта перестановка будет посчитана. В перестановке [2,1], p1 > p2. Так как 0 &lt; n, эта перестановка не будет посчитана.</p>
 
-  <p>n=2, существует 12 перестановок: [1,2,3,4],[1,2,4,3],[1,3,2,4],[1,3,4,2],[1,4,2,3],[2,1,3,4],[2,3,1,4],[2,3,4,1],[2,4,1,3],[3,1,2,4],[3,4,1,2],[4,1,2,3].</p>
+    <p>n=2, существует 12 перестановок: [1,2,3,4],[1,2,4,3],[1,3,2,4],[1,3,4,2],[1,4,2,3],[2,1,3,4],[2,3,1,4],[2,3,4,1],[2,4,1,3],[3,1,2,4],[3,4,1,2],[4,1,2,3].</p>
+  </details>
 </article>
 
 
@@ -1172,31 +1212,34 @@ dcba
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — максимальное расстояние между минимальным и максимальным элементами в массиве Николая, которое может быть получено с помощью ровно одного обмена местами двух элементов массива.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 4 5 1 3 2
 </pre>
-  <code>3</code>
+    <code>3</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 7
 1 6 5 3 4 7 2
 </pre>
-  <code>6</code>
+    <code>6</code>
 
   <h4>Пример 3</h4>
 <pre>
 6
 6 5 4 3 2 1
 </pre>
-  <code>5</code>
-  <p>В первом примере оптимального ответа можно добиться поменяв местами 1 и 2.</p>
+    <code>5</code>
+    <p>В первом примере оптимального ответа можно добиться поменяв местами 1 и 2.</p>
 
-  <p>Во втором примере минимальный и максимальный элементы будут находиться в разных концах массива, если поменять местами 7 и 2.</p>
+    <p>Во втором примере минимальный и максимальный элементы будут находиться в разных концах массива, если поменять местами 7 и 2.</p>
 
-  <p>В третьем примере расстояние между минимальным и максимальным элементов уже максимально возможное, поэтому нужно сделать какой-нибудь ничего не значащий обмен, например 5 и 2.</p>
+    <p>В третьем примере расстояние между минимальным и максимальным элементов уже максимально возможное, поэтому нужно сделать какой-нибудь ничего не значащий обмен, например 5 и 2.</p>
+  </details>
 </article>
 
 
@@ -1220,7 +1263,8 @@ dcba
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите n строк, каждая из которых должна содержать одну правильную скобочную последовательность длины ровно 2n. Все скобочные последовательности, которые вы выводите для одного набора входных данных, должны быть различны (хотя они могут совпадать в разных наборах входных данных). Если ответов несколько, выведите любой из них. Можно показать, что ответ всегда существует.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 3
@@ -1236,5 +1280,6 @@ dcba
 (())()
 ()(())
 </pre>
+  </details>
 </article>
 
