--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp25.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp25.html
@@ -500,19 +500,22 @@ for (int i = 0; i &lt; Res.size(); i++) {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число - максимальный суммарный вес, который вы можете унести.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 10 6
 2 3 4 4 6 9
 </pre>
-  <code>10</code>
+    <code>10</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 10 6
 1 1 1 1 1 1
 </pre>
-  <code>6</code>
+    <code>6</code>
+  </details>
 </article>
 
 
@@ -536,13 +539,15 @@ for (int i = 0; i &lt; Res.size(); i++) {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число - максимальную суммарную стоимость, которую вы можете унести. Если ответ получается не целым, округлите его вверх до ближайшего целого.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8 4
 2 4 4 7
 2 5 5 9
 </pre>
-  <code>11</code>
+    <code>11</code>
+  </details>
 </article>
 
 
@@ -566,13 +571,15 @@ for (int i = 0; i &lt; Res.size(); i++) {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число - максимальную суммарную стоимость, которую вы можете унести.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 8 4
 2 4 4 7
 2 5 5 9
 </pre>
-  <code>10</code>
+    <code>10</code>
+  </details>
 </article>
 
 
@@ -594,19 +601,22 @@ for (int i = 0; i &lt; Res.size(); i++) {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число - максимальный суммарный вес, который вы можете унести.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 10 6
 2 3 4 4 6 9
 </pre>
-  <code>10</code>
+    <code>10</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 10 6
 1 1 1 1 1 1
 </pre>
-  <code>6</code>
+    <code>6</code>
+  </details>
 </article>
 
 
@@ -634,7 +644,8 @@ for (int i = 0; i &lt; Res.size(); i++) {
 
   <p>Иначе в первой строке выведите два числа C и N - максимальная стоимость и количество взятых слитков соответственно. Во второй строке перечислите через пробел N значений - номера взятых слитков.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5 15
 6 4 3 2 5
@@ -644,7 +655,8 @@ for (int i = 0; i &lt; Res.size(); i++) {
 14 3
 1 4 5
 </pre>
-  <p>Выходит, что -1 следует выводить, если невозможно взять ни одного слитка</p>
+    <p>Выходит, что -1 следует выводить, если невозможно взять ни одного слитка</p>
+  </details>
 </article>
 
 
@@ -664,31 +676,34 @@ for (int i = 0; i &lt; Res.size(); i++) {
   <h4>Выходные данные</h4>
   <p>Выведите два числа через пробел - минимальную и максимальную суммы. Если копилка не может иметь точно заданный вес при условии, что она наполнена монетами заданных видов, следует вывести "This is impossible." (Без кавычек).</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 1000 1100
 2
 1 1
 5 2
 </pre>
-  <code>100 250</code>
+    <code>100 250</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 1000 1010
 2
 6 3
 2 2
 </pre>
-  <code>10 16</code>
+    <code>10 16</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 1000 2000
 1
 10 3
 </pre>
-  <code>This is impossible.</code>
+    <code>This is impossible.</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -794,7 +809,9 @@ int main() {
 
   <p>Во второй строке выведите d символов «+» и «–». Символ, стоящий на позиции #j, обозначает, какую операцию следует применить к числу #j из списка принцессы. Если существует несколько способов сделать d ходов, то выведите любой из них.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2 5
 3 2
@@ -804,7 +821,7 @@ int main() {
 ++
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 5
 1 2 3 4 5
@@ -813,6 +830,7 @@ int main() {
 4
 ++-+
 </pre>
+  </details>
 </article>
 
 
@@ -838,24 +856,27 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — максимальное количество тугриков, которые Лаврентий может заработать.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 10 2 2 1
 7 3 2 100
 12 3 1 10
 </pre>
-  <code>241</code>
+    <code>241</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 100 1 25 50
 15 5 20 10
 </pre>
-  <code>200</code>
+    <code>200</code>
 
-  <p>Чтобы получить наибольшее количество тугриков в первом примере, нужно испечь 2 булочки с начинкой 1, 4 булочки с начинкой 2 и одну булочку без начинки.</p>
+    <p>Чтобы получить наибольшее количество тугриков в первом примере, нужно испечь 2 булочки с начинкой 1, 4 булочки с начинкой 2 и одну булочку без начинки.</p>
 
-  <p>Во втором примере имеет смысл испечь только 4 булочки без начинки.</p>
+    <p>Во втором примере имеет смысл испечь только 4 булочки без начинки.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -955,23 +976,26 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно число - максимальное суммарное богатство гангстеров, попавших в ресторан. Если зайти не удалось никому, вывести 0.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 10 20
 10 16 8 16
 10 11 15 1
 10 7 1 8
 </pre>
-  <code>26</code>
+    <code>26</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2 17 100
 5 0
 50 33
 6 1
 </pre>
-  <code>0</code>
+    <code>0</code>
+  </details>
 </article>
 
 
@@ -995,7 +1019,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — максимальную суммарную стоимость унесённых Славой артефактов.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5 10
 1 5 3
@@ -1004,18 +1030,19 @@ int main() {
 4 1 4
 5 3 1
 </pre>
-  <code>15</code>
+    <code>15</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 10
 100 100 20
 200 80 30
 300 60 40
 </pre>
-  <code>0</code>
-  <p>В первом тесте Слава не может просто так взять все артефакты — он может унести только массу до 10, а суммарная масса артефактов — 15. Поэтому Слава активирует артефакты 1 и 4, после чего его предел переносимой массы становится равным 10 + 3 + 4 = 17 (Слава также мог активировать любую пару артефактов, дающих в сумме прибавку 5 или более).</p>
-  <p>Во втором тесте Слава не может унести никакие артефакты — ни с активацией некоторых, ни без оной.</p>
+    <code>0</code>
+    <p>В первом тесте Слава не может просто так взять все артефакты — он может унести только массу до 10, а суммарная масса артефактов — 15. Поэтому Слава активирует артефакты 1 и 4, после чего его предел переносимой массы становится равным 10 + 3 + 4 = 17 (Слава также мог активировать любую пару артефактов, дающих в сумме прибавку 5 или более).</p>
+    <p>Во втором тесте Слава не может унести никакие артефакты — ни с активацией некоторых, ни без оной.</p>
+  </details>
 </article>
 
 
@@ -1057,7 +1084,8 @@ int main() {
 
   <p>Если решений несколько, выведите любое из них.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 3 10
@@ -1081,6 +1109,7 @@ int main() {
 1
 2
 </pre>
+  </details>
 </article>
 
 
@@ -1107,16 +1136,18 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите целое число — максимально возможный заряд молнии, который сможет вместить рюкзак Игоря.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 6
 4 9
 3 5
 3 5
 </pre>
-  <code>10</code>
+    <code>10</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 10
 3 20
@@ -1125,18 +1156,18 @@ int main() {
 4 50
 6 100
 </pre>
-  <code>150</code>
+    <code>150</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 3 5
 0 10
 0 20
 0 30
 </pre>
-  <code>60</code>
+    <code>60</code>
 
-  <h4>Пример 4</h4>
+    <h4>Пример 4</h4>
 <pre>
 5 1
 4 10
@@ -1145,6 +1176,7 @@ int main() {
 4 2
 4 10
 </pre>
-  <code>0</code>
+    <code>0</code>
+  </details>
 </article>
 
