--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp26.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp26.html
@@ -198,7 +198,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n чисел через пробел — получившийся после всех запросов массив.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 1 4
 1 1 765
@@ -206,16 +208,17 @@ int main() {
 1 1 -69
 1 1 672
 </pre>
-  <code>1325</code>
+    <code>1325</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 3
 1 4 -23
 4 5 397
 1 5 774
 </pre>
-  <code>751 751 751 1148 1171 </code>
+    <code>751 751 751 1148 1171 </code>
+  </details>
 </article>
 
 
@@ -235,20 +238,23 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите длину окрашенной части прямой.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2
 1 3
 2 4
 </pre>
-  <code>3</code>
+    <code>3</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 1
 10 10
 </pre>
-  <code>0</code>
+    <code>0</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -320,7 +326,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите M чисел — толщину носкового покрытия в каждой точке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 39 4 7
 3 21
@@ -344,6 +351,7 @@ int main() {
 0
 0
 </pre>
+  </details>
 </article>
 
 
@@ -371,16 +379,18 @@ int main() {
 
   <p>Отрезки нумеруются с 1 в порядке их появления во входных данных.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 1 1
 2 2
 3 3
 </pre>
-  <code>-1</code>
+    <code>-1</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6
 1 5
@@ -390,7 +400,8 @@ int main() {
 7 7
 10 10
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 </article>
 
 
@@ -417,22 +428,25 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Требуется вывести одно число — суммарное время за сутки (в секундах), на протяжении которого работают все N касс.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 1 0 0 23 0 0
 12 0 0 12 0 0
 22 0 0 2 0 0
 </pre>
-  <code>7200</code>
+    <code>7200</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2
 9 30 0 14 0 0
 14 15 0 21 0 0
 </pre>
-  <code>0</code>
+    <code>0</code>
+  </details>
 </article>
 
 
@@ -466,7 +480,8 @@ int main() {
 
   <p>Если оптимальных ответов несколько, необходимо вывести любой из них.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 1 2 6
@@ -480,6 +495,7 @@ int main() {
 2
 1 4
 </pre>
+  </details>
 </article>
 
 
@@ -499,7 +515,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В первой строке выходного файла выведите минимальное число отрезков, необходимое для покрытия отрезка [0;M]. Далее выведите список покрывающего подмножества, упорядоченный по возрастанию координат левых концов отрезков. Список отрезков выводится в том же формате, что и во входe. Завершающие два нуля выводить не нужно. Если покрытие отрезка [0,M] исходным множеством отрезков [Lᵢ,Rᵢ] невозможно, то следует вывести единственную фразу "No solution".</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 1
 -1 0
@@ -511,7 +529,7 @@ int main() {
 No solution
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 1
 -1 0
@@ -522,6 +540,7 @@ No solution
 1
 0 1
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -634,7 +653,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите M чисел — для каждой точки количество отрезков, в которых она содержится.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 2
 0 5
@@ -642,15 +663,16 @@ int main() {
 7 10
 1 6
 </pre>
-  <code>2 0</code>
+    <code>2 0</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 1 3
 -10 10
 -100 100 0
 </pre>
-  <code>0 0 1</code>
+    <code>0 0 1</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -741,29 +763,32 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите два числа — номера цивилизаций, периоды существования которых имеют наименьшее ненулевое пересечение. Если никакие две цивилизации не пересекаются во времени, выведите единственное число 0.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 -600 -400
 -450 -300
 -400 -50
 </pre>
-  <code>2 1</code>
+    <code>2 1</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2
 10 20
 15 21
 </pre>
-  <code>2 1</code>
+    <code>2 1</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 1
 77777 77778
 </pre>
-  <code>0</code>
+    <code>0</code>
+  </details>
 </article>
 
 
@@ -797,25 +822,27 @@ int main() {
   <code>0 ≤ Sᵢ &lt; Eᵢ ≤ 24x60</code>
   <code>2 ≤ N ≤ 1000.</code>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 360 480
 420 540
 600 660
 </pre>
-  <code>CJC</code>
+    <code>CJC</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 0 1440
 1 3
 2 4
 </pre>
-  <code>IMPOSSIBLE</code>
+    <code>IMPOSSIBLE</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 5
 99 150
@@ -824,15 +851,16 @@ int main() {
 2 5
 150 250
 </pre>
-  <code>JCCJJ</code>
+    <code>JCCJJ</code>
 
-  <h4>Пример 4</h4>
+    <h4>Пример 4</h4>
 <pre>
 2
 0 720
 720 1440
 </pre>
-  <code>CC</code>
+    <code>CC</code>
+  </details>
 </article>
 
 
@@ -860,16 +888,18 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Если Поликарп сможет посмотреть все шоу, используя только два телевизора, то выведите «YES» (без кавычек). В противном случае, выведите «NO» (без кавычек).</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 1 2
 2 3
 4 5
 </pre>
-  <code>YES</code>
+    <code>YES</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4
 1 2
@@ -877,7 +907,8 @@ int main() {
 2 3
 1 2
 </pre>
-  <code>NO</code>
+    <code>NO</code>
+  </details>
 </article>
 
 
@@ -909,7 +940,9 @@ int main() {
 
   <p>Если оптимальных ответов несколько, необходимо вывести любой из них.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2
 1 1 1
@@ -921,7 +954,7 @@ int main() {
 1 2
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 1 2 1
@@ -933,8 +966,9 @@ int main() {
 1
 3
 </pre>
-  <p>В первом примере Артур успевает решить все задачи и получить три балла.</p>
-  <p>Во втором примере Артуру выгоднее решать последнюю задачу и получить за нее три балла, чем решать только первые две и получить два балла.</p>
+    <p>В первом примере Артур успевает решить все задачи и получить три балла.</p>
+    <p>Во втором примере Артуру выгоднее решать последнюю задачу и получить за нее три балла, чем решать только первые две и получить два балла.</p>
+  </details>
 </article>
 
 
@@ -960,21 +994,23 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число — самый первый день, в который число цветков на всех деревьях будет наибольшим.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 1 9 1
 20 24 2
 35 36 5
 </pre>
-  <code>24</code>
-  <p>Утром 9-го дня суммарное число цветков будет равно 9.</p>
+    <code>24</code>
+    <p>Утром 9-го дня суммарное число цветков будет равно 9.</p>
 
-  <p>Утром 24-го дня суммарное число цветков будет равно 10.</p>
+    <p>Утром 24-го дня суммарное число цветков будет равно 10.</p>
 
-  <p>Утром 36-го дня суммарное число цветков будет равно 10.</p>
+    <p>Утром 36-го дня суммарное число цветков будет равно 10.</p>
 
-  <p>Максимальное число цветков на деревьях – 10, первый раз такое количество будет в 24-й день.</p>
+    <p>Максимальное число цветков на деревьях – 10, первый раз такое количество будет в 24-й день.</p>
+  </details>
 </article>
 
 
@@ -1003,7 +1039,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число – количество секунд на ремонт у соседа.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 13:00:00 14:00:00
@@ -1012,9 +1050,9 @@ int main() {
 01:00:00 05:00:00
 04:00:00 05:00:00
 </pre>
-  <code>61200</code>
+    <code>61200</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4
 22:49:13 05:22:28
@@ -1022,15 +1060,16 @@ int main() {
 11:34:33 11:28:25
 08:55:57 19:49:53
 </pre>
-  <code>0</code>
+    <code>0</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 2
 10:48:15 07:42:04
 03:00:33 04:52:08
 </pre>
-  <code>11171</code>
+    <code>11171</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
