--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp27.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp27.html
@@ -211,13 +211,16 @@ void Hod(vector&lt;vector&lt;int&gt; &gt; &DP,
   <h4>Выходные данные</h4>
   <p>Выведите три целых числа через пробел: наименьшее количество ходов, требуемых ладье, слону и королю (в таком порядке) для того, чтобы переместиться из поля (r₁, c₁) на поле (r₂, c₂). В случае, если какая-то из фигур не может совершить такое перемещение, выведите вместо соответствующего числа 0.</p>
 
-  <h4>Пример 1</h4>
-  <code>4 3 1 6</code>
-  <code>2 1 3</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>4 3 1 6</code>
+    <code>2 1 3</code>
 
-  <h4>Пример 2</h4>
-  <code>5 5 5 6</code>
-  <code>1 0 1</code>
+    <h4>Пример 2</h4>
+    <code>5 5 5 6</code>
+    <code>1 0 1</code>
+  </details>
 </article>
 
 
@@ -237,7 +240,9 @@ void Hod(vector&lt;vector&lt;int&gt; &gt; &DP,
   <h4>Выходные данные</h4>
   <p>Выведите в первой строке «Y» (без кавычек), если движение возможно, или «N» (без кавычек), если нет. Если движение возможно, то далее следует вывести N строк по N символов - как и на вводе, но буква X, а также все точки по пути следует заменить плюсами. Если решений несколько, выведите любое.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 ....X
@@ -255,7 +260,7 @@ OOOO+
 @++++
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 ..X..
@@ -268,7 +273,7 @@ OOOOO
 N
 </pre>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 5
 ...X.
@@ -285,6 +290,7 @@ O+OOO
 .++++
 ....@
 </pre>
+  </details>
 </article>
 
 
@@ -306,7 +312,9 @@ O+OOO
   <h4>Выходные данные</h4>
   <p>Программа должна вывести путь коня, начинающийся и заканчивающийся в данных клетках и содержащий наименьшее число клеток.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 a1
 h8
@@ -320,6 +328,7 @@ d8
 f7
 h8
 </pre>
+  </details>
 </article>
 
 
@@ -347,29 +356,32 @@ h8
   <h4>Выходные данные</h4>
   <p>Выведите одну строку, содержащую два целых числа x и y, записанные через пробел, — координаты дерева, которое загорится последним. Если таких деревьев несколько, выведите любое из них.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 3
 1
 2 2
 </pre>
-  <code>1 1</code>
+    <code>1 1</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 3
 1
 1 1
 </pre>
-  <code>3 3</code>
+    <code>3 3</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 3
 2
 1 1 3 3
 </pre>
-  <code>2 2</code>
+    <code>2 2</code>
+  </details>
 </article>
 
 
@@ -397,7 +409,8 @@ h8
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число – минимальное количество шагов для достижения цели. Если добраться до конечной клетки нельзя, то выведите «–1» без кавычек.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 phx
@@ -406,7 +419,8 @@ hhh
 2 1
 3 3
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 </article>
 
 
@@ -430,21 +444,24 @@ hhh
   <h4>Выходные данные</h4>
   <p>Выведите наименьшее количество сугробов, которые надо соорудить Байтеку для того, чтобы он мог добраться от любого сугроба до любого другого.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2
 2 1
 1 2
 </pre>
-  <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2
 2 1
 4 1
 </pre>
-  <code>0</code>
+    <code>0</code>
+  </details>
 
   <details>Решение</details>
   <p>Все сугробы, до которых можно добраться начиная движения от одного из этих сугробов, образуют компонент связности. Среди всех сугробов может быть несколько таких компонент связности. Чтобы объединить 2 компонента связности в один, нужно поставить ровно один сугроб на пересечении горизонтали и вертикали любых двух сугробов из разных компонент звязности. Чтобы объединить N компонет связности в один компонент нужно поставить ровно N-1 сугроб.</p>
@@ -539,25 +556,27 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите «Yes», если существует цикл, и «No» в противном случае.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 4
 AAAA
 ABCA
 AAAA
 </pre>
-  <code>Yes</code>
+    <code>Yes</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 4
 AAAA
 ABCA
 AADA
 </pre>
-  <code>No</code>
+    <code>No</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4 4
 YYYR
@@ -565,9 +584,9 @@ BYBY
 BBBY
 BBBY
 </pre>
-  <code>Yes</code>
+    <code>Yes</code>
 
-  <h4>Пример 4</h4>
+    <h4>Пример 4</h4>
 <pre>
 7 6
 AAAAAB
@@ -578,20 +597,21 @@ ABAAAB
 ABBBAB
 AAAAAB
 </pre>
-  <code>Yes</code>
+    <code>Yes</code>
 
-  <h4>Пример 5</h4>
+    <h4>Пример 5</h4>
 <pre>
 2 13
 ABCDEFGHIJKLM
 NOPQRSTUVWXYZ
 </pre>
-  <code>No</code>
-  <p>В первом примере буквы 'A' формируют цикл.</p>
+    <code>No</code>
+    <p>В первом примере буквы 'A' формируют цикл.</p>
 
-  <p>Во втором примере цикла не существует.</p>
+    <p>Во втором примере цикла не существует.</p>
 
-  <p>Третий пример изображён на картинке выше ('Y' обозначает жёлтый, 'B' — синий, 'R' — красный).</p>
+    <p>Третий пример изображён на картинке выше ('Y' обозначает жёлтый, 'B' — синий, 'R' — красный).</p>
+  </details>
 </article>
 
 
@@ -617,7 +637,9 @@ NOPQRSTUVWXYZ
 
   <p>Гарантируется, что решение существует. Если существует несколько решений, разрешается вывести любое.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 4 2
 #..#
@@ -630,7 +652,7 @@ X.#.
 #...
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 4 5
 #...
@@ -646,6 +668,7 @@ X#..
 ...#
 .#.#
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -777,7 +800,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — минимальную возможную стоимость постройки не более одного туннеля так, чтобы Алиса смогла добраться от клетки (r1,c1) до клетки (r2,c2).</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 1 1
@@ -788,9 +813,9 @@ int main() {
 00110
 00110
 </pre>
-  <code>10</code>
+    <code>10</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 1 3
@@ -799,9 +824,10 @@ int main() {
 101
 010
 </pre>
-  <code>8</code>
-  <p>В первом примере должен быть построен туннель между клетками (1,4) и (4,5). Стоимость такого туннеля равна (1-4)²+(4-5)²=10, что является оптимальным. Таким образом, Алиса сможет дойти от (1,1) до (1,4), использовать туннель от (1,4) до (4,5), а затем дойти от (4,5) до (5,5).</p>
-  <p>Во втором примере должен быть построен туннель между клетками (1,3) и (3,1). Стоимость такой постройки равна (1-3)²+(3-1)²=8.</p>
+    <code>8</code>
+    <p>В первом примере должен быть построен туннель между клетками (1,4) и (4,5). Стоимость такого туннеля равна (1-4)²+(4-5)²=10, что является оптимальным. Таким образом, Алиса сможет дойти от (1,1) до (1,4), использовать туннель от (1,4) до (4,5), а затем дойти от (4,5) до (5,5).</p>
+    <p>Во втором примере должен быть построен туннель между клетками (1,3) и (3,1). Стоимость такой постройки равна (1-3)²+(3-1)²=8.</p>
+  </details>
 </article>
 
 
@@ -827,7 +853,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите «YES», если существует путь из левой верхней клетки в правую нижнюю, являющийся кратчайшим в обоих лабиринтах. Иначе выведите «NO».</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 5
 .....
@@ -839,9 +867,9 @@ int main() {
 #.#.#
 .....
 </pre>
-  <code>NO</code>
+    <code>NO</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 5
 .....
@@ -853,7 +881,8 @@ int main() {
 ##.#.
 .....
 </pre>
-  <code>YES</code>
+    <code>YES</code>
+  </details>
 </article>
 
 
@@ -879,22 +908,25 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Если указанная схема удовлетворяет требованиям, выведите в единственной строке "YES", в противном случае выведите в единственной строке "NO".</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 3
 >&lt;>
 v^v
 </pre>
-  <code>NO</code>
+    <code>NO</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4 6
 &lt;>&lt;>
 v^v^v^
 </pre>
-  <code>YES</code>
-  <p>Рисунок в условии соответствует второму примеру.</p>
+    <code>YES</code>
+    <p>Рисунок в условии соответствует второму примеру.</p>
+  </details>
 </article>
 
 
@@ -922,7 +954,9 @@ v^v^v^
   <h4>Выходные данные</h4>
   <p>Если выиграет Маша, выведите строку «WIN». Если выиграют статуи, выведите строку «LOSE».</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 .......A
 ........
@@ -933,9 +967,9 @@ v^v^v^
 ........
 M.......
 </pre>
-  <code>WIN</code>
+    <code>WIN</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 .......A
 ........
@@ -946,9 +980,9 @@ M.......
 SS......
 M.......
 </pre>
-  <code>LOSE</code>
+    <code>LOSE</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 .......A
 ........
@@ -959,7 +993,8 @@ M.......
 S.......
 MS......
 </pre>
-  <code>LOSE</code>
+    <code>LOSE</code>
+  </details>
 </article>
 
 
@@ -985,7 +1020,8 @@ MS......
   <h4>Выходные данные</h4>
   <p>Выведите одно число: количество путей, которые длиннее кратчайшего ровно на две секунды. Если парк устроен так, что невозможно добраться от входа до выхода, то выведите ноль.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6 9
 .........
@@ -995,7 +1031,8 @@ MS......
 ..##...#.
 .....#...
 </pre>
-  <code>15</code>
+    <code>15</code>
+  </details>
 </article>
 
 
@@ -1021,21 +1058,24 @@ MS......
   <h4>Выходные данные</h4>
   <p>Выведите 0, если обойти вокруг выреза нельзя, или минимально необходимое число ходов коня для такого обхода.</p>
 
-  <h4>Пример 1</h4>
-  <code>5 5</code>
-  <code>4</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>5 5</code>
+    <code>4</code>
 
-  <h4>Пример 2</h4>
-  <code>20 15</code>
-  <code>30</code>
+    <h4>Пример 2</h4>
+    <code>20 15</code>
+    <code>30</code>
 
-  <h4>Пример 3</h4>
-  <code>1000 1000</code>
-  <code>1996</code>
+    <h4>Пример 3</h4>
+    <code>1000 1000</code>
+    <code>1996</code>
 
-  <h4>Пример 4</h4>
-  <code>5 6</code>
-  <code>6</code>
+    <h4>Пример 4</h4>
+    <code>5 6</code>
+    <code>6</code>
+  </details>
 </article>
 
 
@@ -1071,7 +1111,8 @@ MS......
   <h4>Выходные данные</h4>
   <p>Для каждого теста выведите одно целое число — наибольший объем озера в сетке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 3 3
@@ -1104,6 +1145,7 @@ MS......
 16
 21
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1309,7 +1351,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число – минимальное количество ячеек, которое необходимо закрасить, чтобы соединить первую строку с n-й строкой.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5 5
 ....#
@@ -1318,6 +1361,7 @@ int main() {
 ...#.
 .#...
 </pre>
-  <code>2</code>
+    <code>2</code>
+  </details>
 </article>
 
