--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp30.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp30.html
@@ -178,7 +178,8 @@ for (int i = 0; i &lt; q; i++) {
   <h4>Выходные данные</h4>
   <p>Вывести M строк, в каждой из которых записано число — количество компонент связности.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5 5
 1 2
@@ -194,6 +195,7 @@ for (int i = 0; i &lt; q; i++) {
 1
 1
 </pre>
+  </details>
 </article>
 
 
@@ -213,7 +215,9 @@ for (int i = 0; i &lt; q; i++) {
   <h4>Выходные данные</h4>
   <p>Выведите одно число - размер наибольшего префикса.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 7 9
 1 2
@@ -226,16 +230,17 @@ for (int i = 0; i &lt; q; i++) {
 1 4
 2 7
 </pre>
-  <code>6</code>
+    <code>6</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 3
 1 2
 1 1
 1 2
 </pre>
-  <code>1</code>
+    <code>1</code>
+  </details>
 </article>
 
 
@@ -259,7 +264,9 @@ for (int i = 0; i &lt; q; i++) {
 
   <p>Если ответов несколько - выведите любой.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 6
 1 2 4
@@ -276,7 +283,7 @@ for (int i = 0; i &lt; q; i++) {
 1 3
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 2
 1 2 1
@@ -288,7 +295,7 @@ for (int i = 0; i &lt; q; i++) {
 2 3
 </pre>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4 6
 1 2 1
@@ -304,6 +311,7 @@ for (int i = 0; i &lt; q; i++) {
 1 3
 1 4
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -391,7 +399,9 @@ int main() {
   <p>В первой строке выходных данных выведите произведение рёбер в остовном дереве с минимальным произведением весов рёбер. Произведение рёбер выведите по модулю 10⁹+7, так как оно может быть очень большим. В следующих N-1 строках выведите через пробел пары чисел uᵢ vᵢ - рёбра полученного дерева.</p>
   <p>Если ответов несколько - выведите любой.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 6
 1 2 4
@@ -408,7 +418,7 @@ int main() {
 1 3
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 2
 1 2 1
@@ -420,7 +430,7 @@ int main() {
 2 3
 </pre>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4 6
 1 2 1
@@ -436,6 +446,7 @@ int main() {
 1 3
 1 4
 </pre>
+  </details>
 </article>
 
 
@@ -461,7 +472,8 @@ int main() {
 
   <p>Далее выведите свой план сети: сначала выведите число P - число кабелей которое используется, далее в следующих P строках выведите пары чисел через пробел - номера узлов соединенных кабелем.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4 6
 1 2 1
@@ -479,6 +491,7 @@ int main() {
 2 3
 3 4
 </pre>
+  </details>
 </article>
 
 
@@ -512,7 +525,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — минимальное значение максимально возможного расстояния между рецептами, которое могло возникнуть в ходе их составления.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5 2
 fb
@@ -523,15 +537,16 @@ fd
 </pre>
   <code>2</code>
 
-  <p>Поясним приведённый пример.</p>
+    <p>Поясним приведённый пример.</p>
 
-  <p>Предположим, что рецептом самого вкусного чая был первый рецепт (fb). Несложно заметить, что расстояние до рецепта второго чая (ga) составляет единицу. Очевидно, что это минимально возможное расстояние между разными рецептами, и можно считать, что второй рецепт был получен непосредственно из первого.</p>
+    <p>Предположим, что рецептом самого вкусного чая был первый рецепт (fb). Несложно заметить, что расстояние до рецепта второго чая (ga) составляет единицу. Очевидно, что это минимально возможное расстояние между разными рецептами, и можно считать, что второй рецепт был получен непосредственно из первого.</p>
 
-  <p>Четвёртый рецепт (dc) отстоит от первого рецепта на расстояние 2; также на расстояние 2 от четвёртого рецепта отстоит пятый рецепт (fd). Можно полагать, что Дракон взял за основу первый рецепт, получил из него четвёртый, а затем из четвёртого — пятый.</p>
+    <p>Четвёртый рецепт (dc) отстоит от первого рецепта на расстояние 2; также на расстояние 2 от четвёртого рецепта отстоит пятый рецепт (fd). Можно полагать, что Дракон взял за основу первый рецепт, получил из него четвёртый, а затем из четвёртого — пятый.</p>
 
-  <p>Наконец, третий рецепт (ef) мог быть получен из пятого рецепта (fd); расстояние между ними составит 2.</p>
+    <p>Наконец, третий рецепт (ef) мог быть получен из пятого рецепта (fd); расстояние между ними составит 2.</p>
 
-  <p>Таким образом, Дракон может получить все перечисленные рецепты чая таким образом, что расстояние между рецептами никогда не будет превосходить 2.</p>
+    <p>Таким образом, Дракон может получить все перечисленные рецепты чая таким образом, что расстояние между рецептами никогда не будет превосходить 2.</p>
+  </details>
 </article>
 
 
@@ -561,7 +576,8 @@ fd
   <h4>Выходные данные</h4>
   <p>В первой строке выведите наименьшую сумму денег, которую придётся потратить для оптимизации существующей схемы полётов. Во второй выведите 2 числа - количество новых рейсов и количество отмены старых.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 2 3
@@ -576,6 +592,7 @@ fd
 7
 1 2
 </pre>
+  </details>
 </article>
 
 
@@ -595,7 +612,9 @@ fd
   <h4>Выходные данные</h4>
   <p>Выведите через пробел Q чисел — число кусочков, из которых будет состоять паутина Ананси после каждого обрыва нити.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 4
 1 2
@@ -605,16 +624,17 @@ fd
 3
 2 4 3
 </pre>
-  <code>1 2 3</code>
+    <code>1 2 3</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 1
 1 2
 1
 1
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -742,7 +762,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите «YES», если ученый сможет добиться того, чтобы карта с номером x встала на первое место, и «NO» иначе.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 4 3 2 1
@@ -751,9 +773,9 @@ int main() {
 2 3 1 4
 1
 </pre>
-  <code>YES</code>
+    <code>YES</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4
 4 3 2 1
@@ -762,7 +784,8 @@ int main() {
 2 1 3 4
 1
 </pre>
-  <code>NO</code>
+    <code>NO</code>
+  </details>
 </article>
 
 
@@ -788,7 +811,8 @@ int main() {
 
   <p>You may print any solution if there are many of them.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 10 20 5 3
@@ -800,7 +824,8 @@ int main() {
 5
 2 3 1 4
 </pre>
-  <p>In the sample test Vasya can choose any order with the only rule: the second wire should be soldered before the first one. If he violates the rule, the total cost will be 4 instead of 5.</p>
+    <p>In the sample test Vasya can choose any order with the only rule: the second wire should be soldered before the first one. If he violates the rule, the total cost will be 4 instead of 5.</p>
+  </details>
 </article>
 
 
@@ -822,9 +847,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите сколько потребуется валерьяны.</p>
 
-  <h4>Пример</h4>
-  <code>3 3 11 23</code>
-  <code>28</code>
+  <details>
+    <summary>Пример</summary>
+    <code>3 3 11 23</code>
+    <code>28</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -977,7 +1004,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого гы-запросы 2 гы-типа выведите в отдельной гы-строчке гы-ответ.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 9
 1 1 2
@@ -996,7 +1025,7 @@ No
 No
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4 5
 1 1 2
@@ -1009,7 +1038,7 @@ No
 Yes
 </pre>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4 12
 1 1 2
@@ -1035,5 +1064,6 @@ No
 No
 No
 </pre>
+  </details>
 </article>
 
