--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp31.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp31.html
@@ -74,7 +74,8 @@
 
   <p>Пожалуйста, используйте оператор flush после каждого запроса, чтобы не оставить часть запроса в буфере.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 Is it rated?
 Is it rated?
@@ -85,6 +86,7 @@ NO
 NO
 NO
 </pre>
+  </details>
 </article>
 
 
@@ -137,7 +139,8 @@ NO
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите украденную строку в единственной строке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 3 5
@@ -168,11 +171,11 @@ ccccc
 cccc
 kekeke
 </pre>
-  <p>В первом наборе входных данных в строках «aaaaa» и «bbbbb» обменяли все позиции и «ccccc» является украденной строкой.</p>
+    <p>В первом наборе входных данных в строках «aaaaa» и «bbbbb» обменяли все позиции и «ccccc» является украденной строкой.</p>
 
-  <p>Во втором наборе входных данных в строках «aaaa» и «bbbb» обменяли первые две позиции и «cccc» является украденной строкой.</p>
+    <p>Во втором наборе входных данных в строках «aaaa» и «bbbb» обменяли первые две позиции и «cccc» является украденной строкой.</p>
 
-  <p>Это первый тест, записанный в формате для взломов:</p>
+    <p>Это первый тест, записанный в формате для взломов:</p>
 <pre>
 3
 3 5
@@ -197,6 +200,7 @@ xyzklm
 2 4 3 2 4 6
 5 4 1 2 3
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -292,7 +296,9 @@ int main() {
 
   <p>Взломы. Чтобы совершить взлом, вам требуется указать загаданное число — одно целое число в интервале [2, 100]. Разумеется, у взламываемого решения не будет возможности прочитать это число из входных данных.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 yes
 no
@@ -305,7 +311,7 @@ yes
 composite
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 no
 yes
@@ -321,9 +327,9 @@ no
 2
 prime
 </pre>
-  <p>Ниже приведён пример протокола общения для первого и второго примеров.</p>
+    <p>Ниже приведён пример протокола общения для первого и второго примеров.</p>
 
-  <p>В первом примере Лимак загадал число 30.</p>
+    <p>В первом примере Лимак загадал число 30.</p>
 
 <pre>
 solution  system
@@ -332,9 +338,9 @@ solution  system
    5        yes
 composite
 </pre>
-  <p>Загаданное число делится на 2 и 5, следовательно, является составным. Обратите внимание, что не требуется точно угадывать загаданное число.</p>
+    <p>Загаданное число делится на 2 и 5, следовательно, является составным. Обратите внимание, что не требуется точно угадывать загаданное число.</p>
 
-  <p>Во втором примере Лимак загадал число 59.</p>
+    <p>Во втором примере Лимак загадал число 59.</p>
 <pre>
 solution  system
   58         no
@@ -344,7 +350,8 @@ solution  system
    2         no
 prime
 </pre>
-  <p>Число 59 является делителем загаданного числа, но в интервале [2, 100] есть только одно число с таким делителем, и оно является простым. Обратите внимание, что ответ известен уже после второго запроса, но не запрещается продолжать спрашивать (если при этом не превышается лимит на 20 запросов).</p>
+    <p>Число 59 является делителем загаданного числа, но в интервале [2, 100] есть только одно число с таким делителем, и оно является простым. Обратите внимание, что ответ известен уже после второго запроса, но не запрещается продолжать спрашивать (если при этом не превышается лимит на 20 запросов).</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -424,7 +431,8 @@ int main() {
 
   <p>Чтобы дать ответ на задачу, ваша программа должна отправить строку ! a1 a2 a3 a4 a5 a6 с символом перевода строки в конце. После этого она должна сбросить буфер вывода и завершиться.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 16
 64
@@ -438,7 +446,8 @@ int main() {
 ? 4 6
 ! 4 8 15 16 23 42
 </pre>
-  <p>Если вы хотите отправить взлом по этой задаче, ваш тест должен содержать ровно шесть целых чисел a1, a2, ..., a6, разделенных пробелами. Каждое из 6 особых чисел должно встречаться в тесте ровно один раз. Тест должен заканчиваться символом конца строки.</p>
+    <p>Если вы хотите отправить взлом по этой задаче, ваш тест должен содержать ровно шесть целых чисел a1, a2, ..., a6, разделенных пробелами. Каждое из 6 особых чисел должно встречаться в тесте ровно один раз. Тест должен заканчиваться символом конца строки.</p>
+  </details>
 </article>
 
 
@@ -473,7 +482,8 @@ int main() {
 
   <p>После вывода ответа ваша программа должна завершиться.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 
@@ -501,11 +511,12 @@ int main() {
 
 ! 4 6 1 5 5
 </pre>
-  <p>Вы можете взламывать, задавая тесты следующего вида:</p>
-  <ul>
-    <li>в первой строке должно быть записано целое число n (3 ≤ n ≤ 5000) — длина массива,</li>
-    <li>во второй строке должны быть записаны целые числа a1, a2, ..., an (1 ≤ ai ≤ 10⁵) — элементы загаданного массива.</li>
-  </ul>
+    <p>Вы можете взламывать, задавая тесты следующего вида:</p>
+    <ul>
+      <li>в первой строке должно быть записано целое число n (3 ≤ n ≤ 5000) — длина массива,</li>
+      <li>во второй строке должны быть записаны целые числа a1, a2, ..., an (1 ≤ ai ≤ 10⁵) — элементы загаданного массива.</li>
+    </ul>
+  </details>
 </article>
 
 
@@ -541,7 +552,8 @@ int main() {
 
   <p>To guess the flamingoes, print a line that starts with "!" followed by N integers where the i-th integer denotes the number of flamingo in cage i. After answering, your program must terminate or will receive the "idle limit exceeded" verdict. You can only guess the flamingoes once.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 
@@ -562,7 +574,8 @@ int main() {
 
 ! 1 4 4 6 7 8
 </pre>
-  <p>In the sample input, the correct flamingoes amount is [1,4,4,6,7,8].</p>
+    <p>In the sample input, the correct flamingoes amount is [1,4,4,6,7,8].</p>
+  </details>
 </article>
 
 
@@ -607,7 +620,8 @@ int main() {
 
   <p>В первой строке выведите одно целое число n (2 ≤ n ≤ 10⁵). Во второй строке выведите перестановку n целых чисел от 1 до n. Позиция числа n в перестановке и будет позицией максимума.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 
@@ -623,8 +637,9 @@ int main() {
 
 ! 1
 </pre>
-  <p>В примере представьте, что a это [5,1,4,2,3]. Так, после запроса подотрезка [1..5] элемент со значением 4 является вторым по значению и стоит на позиции 3. После запроса подтрезка [4..5] элемент со значением 2 является вторым по значению и стоит на позиции 4 во всём массиве.</p>
-  <p>Заметьте, что существуют другие массивы a, для которых интеракция выглядит точно также, а ответ может быть другим. Пример вывода дан для понимания интеракции.</p>
+    <p>В примере представьте, что a это [5,1,4,2,3]. Так, после запроса подотрезка [1..5] элемент со значением 4 является вторым по значению и стоит на позиции 3. После запроса подтрезка [4..5] элемент со значением 2 является вторым по значению и стоит на позиции 4 во всём массиве.</p>
+    <p>Заметьте, что существуют другие массивы a, для которых интеракция выглядит точно также, а ответ может быть другим. Пример вывода дан для понимания интеракции.</p>
+  </details>
 </article>
 
 
@@ -692,7 +707,8 @@ int main() {
 
   <p>Взламываемое решение не будет иметь прямого доступа к загаданному массиву.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6 1
 2
@@ -720,7 +736,8 @@ int main() {
 
 ! 5
 </pre>
-  <p>В первом тесте загадан массив [1,0,1,1,0,1]. В этом тесте k=2.</p>
+    <p>В первом тесте загадан массив [1,0,1,1,0,1]. В этом тесте k=2.</p>
+  </details>
 </article>
 
 
@@ -770,7 +787,8 @@ int main() {
 
   <p>В первой строке выведите n (1 ≤ n ≤ 10⁴). Во второй строке выведите перестановку из n чисел p1,p2,…,pn.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 
@@ -793,6 +811,7 @@ int main() {
 
 ! 1 3 2
 </pre>
+  </details>
 </article>
 
 
@@ -817,7 +836,8 @@ int main() {
 
   <p>Когда вы узнаете ответ, выведите символ «!» и единственное целое число через пробел — номер иллюмината, имеющего уровень n - 1.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 >
@@ -838,7 +858,8 @@ int main() {
 ? 4 5
 ! 4
 </pre>
-  <p>Обратите внимание, что после вывода каждого сообщения ваша программа должна очищать потоковый буфер, чтобы выведенная вами информация дошла до программы жюри: например, это делают вызовы «fflush(stdout)» или «cout.flush()» в C++, «System.out.flush()» в Java, «Console.Out.Flush()» в C#, «flush(output)» в Pascal, «sys.stdout.flush()» в Python.</p>
+    <p>Обратите внимание, что после вывода каждого сообщения ваша программа должна очищать потоковый буфер, чтобы выведенная вами информация дошла до программы жюри: например, это делают вызовы «fflush(stdout)» или «cout.flush()» в C++, «System.out.flush()» в Java, «Console.Out.Flush()» в C#, «flush(output)» в Pascal, «sys.stdout.flush()» в Python.</p>
+  </details>
 </article>
 
 
@@ -891,7 +912,8 @@ int main() {
 
   <p>Гарантируется, что загаданная точка имеет натуральные координаты, а также загаданная точка фиксированная и не будет меняться в ходе тестирования вашей программы.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 No
@@ -910,25 +932,26 @@ Yes
 ? 1 2 2
 ! 2 2
 </pre>
-  <p>После каждого действия вашей программы выводите символ перевода строки. После вывода очередного запроса обязательно используйте функции очистки потока, чтобы часть вашего вывода не осталась в каком-нибудь буфере. Например, на С++ надо использовать функцию «fflush(stdout)», на Java вызов «System.out.flush()», на Pascal «flush(output)» и «stdout.flush()» для языка Python.</p>
+    <p>После каждого действия вашей программы выводите символ перевода строки. После вывода очередного запроса обязательно используйте функции очистки потока, чтобы часть вашего вывода не осталась в каком-нибудь буфере. Например, на С++ надо использовать функцию «fflush(stdout)», на Java вызов «System.out.flush()», на Pascal «flush(output)» и «stdout.flush()» для языка Python.</p>
 
-  <h4>ПОЯСНЕНИЕ К ПРИМЕРУ</h4>
+    <h4>ПОЯСНЕНИЕ К ПРИМЕРУ</h4>
 
-  <p>В тесте из условия была загадана точка с координатами (2,2) (F на рисунке) на квадрате со стороной 3. Для удобства представлен рисунок.</p>
+    <p>В тесте из условия была загадана точка с координатами (2,2) (F на рисунке) на квадрате со стороной 3. Для удобства представлен рисунок.</p>
 
-  <p>Первый запрос — принадлежит ли точка отрезку (1,1) (3,2) (AD на рисунке)? Ответ — нет.</p>
+    <p>Первый запрос — принадлежит ли точка отрезку (1,1) (3,2) (AD на рисунке)? Ответ — нет.</p>
 
-  <p>Второй запрос — принадлежит ли точка отрезку (3,1) (2,3) (CH на рисунке)? Ответ — нет.</p>
+    <p>Второй запрос — принадлежит ли точка отрезку (3,1) (2,3) (CH на рисунке)? Ответ — нет.</p>
 
-  <p>Третий запрос — принадлежит ли точка отрезку (3,3) (1,2) (IE на рисунке)? Ответ — нет.</p>
+    <p>Третий запрос — принадлежит ли точка отрезку (3,3) (1,2) (IE на рисунке)? Ответ — нет.</p>
 
-  <p>Четвёртый запрос — принадлежит ли точка отрезку (1,3) (2,1) (GB на рисунке)? Ответ — нет.</p>
+    <p>Четвёртый запрос — принадлежит ли точка отрезку (1,3) (2,1) (GB на рисунке)? Ответ — нет.</p>
 
-  <p>Пятый запрос — принадлежит ли точка треугольнику (1,1) (2,3) (3,1) (AHC на рисунке)? Ответ — да.</p>
+    <p>Пятый запрос — принадлежит ли точка треугольнику (1,1) (2,3) (3,1) (AHC на рисунке)? Ответ — да.</p>
 
-  <p>Шестой запрос — является ли точка (2,2) искомой? Ответ — да.</p>
+    <p>Шестой запрос — является ли точка (2,2) искомой? Ответ — да.</p>
 
-  <p>Выводится ответ ! 2 2.</p>
+    <p>Выводится ответ ! 2 2.</p>
+  </details>
 </article>
 
 
@@ -955,7 +978,8 @@ Yes
 
   <p>Чтобы вывести окончательный ответ, вы должны вывести сначала букву «A», а затем через пробел n элементов перестановки — p1, . . . , pn. После этого ваша программа должна завершиться.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 3
@@ -966,7 +990,8 @@ Q 1 1
 Q 1 2
 A 3 1 2
 </pre>
-  <p>Пустые строки в примере приведены лишь для удобства, чтобы было лучше понятно, в каком порядке выводятся сообщения. При решении задачи вам не нужно выводить пустые строки, и программа жюри тоже не будет выводить пустые строки.</p>
+    <p>Пустые строки в примере приведены лишь для удобства, чтобы было лучше понятно, в каком порядке выводятся сообщения. При решении задачи вам не нужно выводить пустые строки, и программа жюри тоже не будет выводить пустые строки.</p>
+  </details>
 </article>
 
 
@@ -994,7 +1019,8 @@ A 3 1 2
 
   <p>Если посещены все доступные клетки ваша программа должна вывести строку "DONE" и завершиться. Иначе продолжить выполнение с вывода действия. Пустые клетки могут быть посещены несколько раз.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 UP
 LEFT
@@ -1016,14 +1042,15 @@ EMPTY
 EMPTY
 EMPTY
 </pre>
-  <p>Для корректной работы программы после каждой операции вывода данных вам необходимо делать следующие операции:</p>
-  <ul>
-    <li>В языке Pascal: flush(output);</li>
-    <li>В C/C++: fflush(stdout);</li>
-    <li>В Java: System.out.flush();</li>
-    <li>В Python: sys.stdout.flush();</li>
-  </ul>
-  <p>Кроме этого, не забывайте после каждой выведенной строки ставить перевод строки.</p>
+    <p>Для корректной работы программы после каждой операции вывода данных вам необходимо делать следующие операции:</p>
+    <ul>
+      <li>В языке Pascal: flush(output);</li>
+      <li>В C/C++: fflush(stdout);</li>
+      <li>В Java: System.out.flush();</li>
+      <li>В Python: sys.stdout.flush();</li>
+    </ul>
+    <p>Кроме этого, не забывайте после каждой выведенной строки ставить перевод строки.</p>
+  </details>
 </article>
 
 
@@ -1098,7 +1125,8 @@ EMPTY
 
   <p>Обратите внимание, что интерактор является неадаптивным, то есть ответ известен до того, как участник задает запросы, и не зависит от запросов, заданных участником.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2
 5
@@ -1133,20 +1161,21 @@ EMPTY
 ! 7
 
 </pre>
-  <p>В первом наборе входных данных камень с массой два находится в куче 2, как показано на рисунке. Взаимодействие происходит так:</p>
-  <ul>
-    <li>? 4 1 2 3 4 — спрашиваем общую массу кучек 1, 2, 3 и 4. Общая масса, которую мы получим, равна 1+3+3+4=11.</li>
-    <li>? 2 2 3 — спрашиваем общую массу кучек 2 и 3. Общая масса, которую мы получим, равна 3+3=6.</li>
-    <li>? 1 2 — спрашиваем общую массу кучи 2. Общая масса, которую мы получим, равна 3.</li>
-    <li>! 2 — мы выяснили, что куча 2 содержит особый камень, поэтому выводим его и переходим к следующему набору входных данных.</li>
-  </ul>
+    <p>В первом наборе входных данных камень с массой два находится в куче 2, как показано на рисунке. Взаимодействие происходит так:</p>
+    <ul>
+      <li>? 4 1 2 3 4 — спрашиваем общую массу кучек 1, 2, 3 и 4. Общая масса, которую мы получим, равна 1+3+3+4=11.</li>
+      <li>? 2 2 3 — спрашиваем общую массу кучек 2 и 3. Общая масса, которую мы получим, равна 3+3=6.</li>
+      <li>? 1 2 — спрашиваем общую массу кучи 2. Общая масса, которую мы получим, равна 3.</li>
+      <li>! 2 — мы выяснили, что куча 2 содержит особый камень, поэтому выводим его и переходим к следующему набору входных данных.</li>
+    </ul>
 
-  <p>Во втором наборе входных данных камень с весом два находится на индексе 7. Взаимодействие происходит так:</p>
-  <ul>
-    <li>? 4 2 3 5 6 — спрашиваем общую массу кучек 2, 3, 5 и 6. Общая масса, которую мы получим обратно, равна 2+3+3+4=12.</li>
-    <li>? 2 1 4 — спрашиваем общую массу кучек 1 и 4. Общая масса, которую мы получим, равна 1+5=6.</li>
-    <li>! 7 — мы каким-то образом выяснили, что куча 7 содержит особый камень, поэтому выводим его и завершаем взаимодействие.</li>
-  </ul>
+    <p>Во втором наборе входных данных камень с весом два находится на индексе 7. Взаимодействие происходит так:</p>
+    <ul>
+      <li>? 4 2 3 5 6 — спрашиваем общую массу кучек 2, 3, 5 и 6. Общая масса, которую мы получим обратно, равна 2+3+3+4=12.</li>
+      <li>? 2 1 4 — спрашиваем общую массу кучек 1 и 4. Общая масса, которую мы получим, равна 1+5=6.</li>
+      <li>! 7 — мы каким-то образом выяснили, что куча 7 содержит особый камень, поэтому выводим его и завершаем взаимодействие.</li>
+    </ul>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1232,7 +1261,8 @@ int main() {
 
   <p>Если вы готовы вывести ответ, выведите «! x b», где x и b — угаданные значения числа и основания системы счисления. Вывод ответа запросом не считается.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 1
 
@@ -1248,7 +1278,8 @@ int main() {
 
 ! 1 2
 </pre>
-  <p>В примере интерактивного взаимодействия запросы и ответы разделены пустыми строками, чтобы наглядно показать процесс взаимодействия. В настоящем взаимодействии с программой жюри пустых строк не будет, их также не следует выводить, однако после каждого запроса, а также после вывода ответа необходимо выводить перевод строки.</p>
+    <p>В примере интерактивного взаимодействия запросы и ответы разделены пустыми строками, чтобы наглядно показать процесс взаимодействия. В настоящем взаимодействии с программой жюри пустых строк не будет, их также не следует выводить, однако после каждого запроса, а также после вывода ответа необходимо выводить перевод строки.</p>
+  </details>
 </article>
 
 
@@ -1279,7 +1310,8 @@ int main() {
 
   <p>Программа жюри в этой задаче может быть адаптивной. Иначе говоря, программа жюри может подбирать свои ответы таким образом, что существует строка, для которой все ответы корректны, но она не фиксирована заранее, а меняется в зависимости от запросов вашей программы. В частности, если существует строка, для которой все ответы на запросы являются корректными, но отличная от строки, которую угадала ваша программа, решение может получить вердикт «Wrong answer».</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 
@@ -1304,6 +1336,7 @@ int main() {
 
 ! abc
 </pre>
-  <p>В примере интерактивного взаимодействия запросы и ответы разделены пустыми строками, чтобы наглядно показать процесс взаимодействия. В настоящем взаимодействии с программой жюри пустых строк не будет, их также не следует выводить, однако после каждого запроса, а также после вывода ответа необходимо выводить перевод строки.</p>
+    <p>В примере интерактивного взаимодействия запросы и ответы разделены пустыми строками, чтобы наглядно показать процесс взаимодействия. В настоящем взаимодействии с программой жюри пустых строк не будет, их также не следует выводить, однако после каждого запроса, а также после вывода ответа необходимо выводить перевод строки.</p>
+  </details>
 </article>
 
