--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp5.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp5.html
@@ -48,9 +48,10 @@
   <div class="anchor" id="p1"></div>
   <h3>string</h3>
 
+  <p>Подключим библиотеку</p>
   <code>#include &lt;string&gt;</code>
-  <p><strong>string</strong> - это более удобная альтернатива строками в стиле С, которую можно использовать в C++. Внутреннее устройство string похоже на вектор символов, мы можем изменять строку и ее размер.
-  </p>
+
+  <p><strong>string</strong> - это более удобная альтернатива строкам в стиле С, которую можно использовать в C++. Внутреннее устройство string похоже на вектор символов, мы можем изменять строку и ее размер.</p>
 <pre>
 string str1;                // пустая
 string str2 = "123";        // строка 123
@@ -58,6 +59,24 @@ string str3 = str2 + "abc"; // строка 123abc
 string str4("new str");     // строка new str
 </pre>
   <code>cin >> str1;</code>
+
+  <p>Создадим две строки</p>
+  <code>string s1 = "abb";</code>
+  <code>string s2 = "abc";</code>
+  <p>Строки можно сравнить между собой</p>
+  <code>"abc" > "abb";</code>
+  <code>"123" &lt; "12";</code>
+
+  <p>Строки можно объединять</p>
+  <code>string s3 = s1 + s2;</code>
+  <code>"abc" + "123"; // "abc123"</code>
+
+  <p><strong>Подстрока</strong> это любое количество соседних символов строки.</p>
+  <p><strong>Префикс</strong> это подстрока, содержащая первый символ.</p>
+  <p><strong>Суффикс</strong> это подстрока , содержащая последний символ.</p>
+  <p><strong>Палиндром</strong> - это строка, которая имеет одинаковые символы если ее читать с начала и с конца.</p>
+  <p>Обращаться к отдельным символам в строке можно как к элементам массива
+  <code>char c = str1[0]; // вернет первый символ строки</code>
   <p>Подстрока - это непрерывная последовательность символов внутри строки.</p>
   <p>Префикс - это непрерывная последовательность символов внутри строки в которой есть первый символ строки.</p>
   <p>Суффикс -  это непрерывная последовательность символов внутри строки, в которой есть последний символ строки.</p>
