--- a/src/components/alg/alg-conspect/yargu3/pages/elem-250629-CentrRus2021q.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-250629-CentrRus2021q.html
@@ -38,6 +38,33 @@
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <p>Сегодня на паре Евгений узнал о новом для себя множестве чисел – комплексных числах.</p>
+
+  <p>Для начала он узнал о том, что такое мнимая единица. Мнимой единицей называют такое число i, что i² = -1.</p>
+
+  <p>Комплексным числом называют число вида a+i⋅b, где a и b – действительные числа, i – мнимая единица. Число a называют действительной частью комплексного числа, b – мнимой его частью.</p>
+
+  <p>Для удобства преподаватель сегодня использовал только те комплексные числа, у которых действительная и мнимая часть являются целыми числами. Евгений научился складывать комплексные числа, ведь что может быть проще: результатом суммы чисел a+i⋅b и c+i⋅d будет новое число, действительная часть которого равна a+c, а мнимая равна b+d, то есть</p>
+  <code>(a+i⋅b)+(c+i⋅d)=(a+c)+i⋅(b+d).</code>
+  <p>Однако посчитать действительную и мнимую части произведения двух комплексных чисел Евгений не смог. Помогите Евгению – напишите программу, которая будет находить действительную и мнимую части произведения двух заданных комплексных чисел.</p>
+
+  <h4>Входные данные</h4>
+  <p>В единственной строке содержатся числа a,b,c,d (-1000 ≤ a, b, c, d ≤ 1000), разделенные пробелом, описывающие два комплексных числа a+i⋅b
+   и c+i⋅d.</p>
+
+  <h4>Выходные данные</h4>
+  <p>В единственной строке выведите два числа – действительную и мнимую части получившегося произведения.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2 1 3 6</code>
+    <code>0 15</code>
+
+    <h4>Пример 2</h4>
+    <code>2 -2 2 2</code>
+    <code>8 0</code>
+  </details>
   <details>
     <summary>Решение</summary>
 <pre>
@@ -88,17 +115,20 @@ int main() {
   <h3>Выходные данные</h3>
   <p>Выведите 'Yes', если получится провести тренировку, и 'No', если провести тренировку нельзя.</p>
 
-  <h4>Пример 1</h4>
-  <code>15 15 10 20</code>
-  <code>Yes</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>15 15 10 20</code>
+    <code>Yes</code>
 
-  <h4>Пример 2</h4>
-  <code>15 15 10 10</code>
-  <code>Yes</code>
+    <h4>Пример 2</h4>
+    <code>15 15 10 10</code>
+    <code>Yes</code>
 
-  <h4>Пример 3</h4>
-  <code>15 15 10 10</code>
-  <code>No</code>
+    <h4>Пример 3</h4>
+    <code>15 15 10 10</code>
+    <code>No</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -139,6 +169,37 @@ int main() {
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <p>Антон недавно поступил в университет, и многое для него в новинку. Так, например, сегодня на программировании он изучал битовые операции, в частности, операцию побитового исключающего «или» двух чисел (xor). Данная операция существует во всех современных языках программирования, например, в языках C++, Python и Java она обозначена как «∧», в Pascal – как «xor». Пример применения операции «xor»: 10101₂ ⊕ 10001₂ = 00100₂. Можно заметить, что «xor» аналогичен сложению соответствующих битов чисел по модулю 2. У Антона есть два N- значных двоичных числа (возможно, содержащие лидирующие нули). Помогите ему найти результат побитового исключающего «или» двух этих чисел, отбросив лидирующие нули.</p>
+
+  <h4>Входные данные</h4>
+  <p>В первой строке содержится число N (1 ≤ N ≤ 10⁵) – количество цифр в каждом из чисел.</p>
+
+  <p>Во второй строке содержится первое двоичное число.</p>
+
+  <p>В третьей строке содержится второе двоичное число.</p>
+
+  <h4>Выходные данные</h4>
+  <p>В единственной строке выведите двоичное число – результат исключающего «или» без лидирующих нулей.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+2
+11
+10
+</pre>
+    <code>1</code>
+
+    <h4>Пример 2</h4>
+<pre>
+4
+0011
+1100
+</pre>
+    <code>1111</code>
+    <p>В первом примере 11₂ ⊕ 10₂ = 01₂ = 1₂.</p>
+  </details>
   <details>
     <summary>Решение</summary>
 <pre>
@@ -201,6 +262,27 @@ int main() {
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <p>Владислав работает в компании «Сулец Компани», которая занимается обработкой текстов. Сегодня он получил задание – реализовать обработчик латинского текста, который бы преобразовывал его в текст, написанный шрифтом Брайля.</p>
+
+  <p>Буквы и знаки препинания в шрифте Брайля кодируются с помощью последовательностей из 6 точек. Ниже приведены аналоги символов, использующихся в данной задаче. Пробелу соответствуют 6 белых точек.</p>
+
+  <p>Помогите Владиславу – напишите программу, которая будет переводить текст, состоящий из строчных латинских букв, некоторых знаков препинания и пробелов, в шрифт Брайля.</p>
+
+  <h4>Входные данные</h4>
+  <p>В единственной строке содержится текст, состоящий из строчных латинских букв, пробелов и знаков препинания (точка, запятая, восклицательный и вопросительный знаки). Длина текста не превосходит 10⁵. Гарантируется, что в строке встретятся только символы, указанные в условии задачи.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите три строки – исходный текст, закодированный шрифтом Брайля. Чёрные точки следует выводить как «.», белые точки – как «*».</p>
+
+  <details>
+    <summary>Пример</summary>
+    <code>acm icpc!</code>
+<pre>
+.*....***.......**
+********.***.***..
+****.*******.***.*
+</pre>
+  </details>
 </article>
 
 
@@ -212,6 +294,50 @@ int main() {
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <p>Игорь закончил магистратуру и решил подать документы в аспирантуру в свой любимый вуз, чтобы стать классным молодым учёным.</p>
+
+  <p>Всего в вузе есть n бюджетных мест в аспирантуре. Вуз отбирает только лучших из лучших студентов, учитывая их достижениям за время обучения. При подаче документов учитываются все грамоты, публикации и гранты студента. Если в результате учета достижений, у студентов окажется равное количество баллов, тогда этим студентам придется написать вступительные экзамены, чтобы поступить на бюджет.</p>
+
+  <p>Эта новость очень обрадовала Игоря, ведь у Игоря было накоплено много грамот, он участвовал в олимпиадах и писал небольшие статьи в сборники. Собрав все свои достижения и посчитав свои баллы (их получилось k), Игорь подал документы. Теперь он ждет не дождется рейтинговых таблиц.</p>
+
+  <p>Вам предстоит определить судьбу Игоря, если Игорь поступает без вступительных экзаменов, выведите 'enter', если Игорю придется сдавать вступительный экзамен, выведите 'entrance exams', иначе выведите 'no chance'.</p>
+
+  <h4>Входные данные</h4>
+  <p>В первой строке записано два целых числа: n (1 ≤ n ≤ 10⁵) — количество бюджетных мест, и k (0 ≤ k ≤ 10⁹) — количество баллов Игоря.</p>
+
+  <p>Во второй строке записано целое число m (1 ≤ m ≤ 10⁵) — количество других абитуриентов.</p>
+
+  <p>В третьей строке записано m целых чисел ki (0 ≤ ki ≤ 10⁹, 1 ≤ i ≤ m) — баллы за достижения других абитуриентов.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите в единственной строке 'enter', если Игорь поступает без вступительных экзаменов, 'entrance exams', если Игорю придется сдавать вступительный экзамен, 'no chance', если Игорь не сможет поступить в аспирантуру.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+6 50
+9
+10 20 30 40 50 60 70 80 90
+</pre>
+    <code>enter</code>
+
+    <h4>Пример 2</h4>
+<pre>
+4 50
+9
+10 20 30 80 90 40 50 60 70
+</pre>
+    <code>no chance</code>
+
+    <h4>Пример 3</h4>
+<pre>
+6 50
+9
+10 20 30 50 50 60 70 80 90
+</pre>
+    <code>entrance exams</code>
+  </details>
 </article>
 
 
@@ -223,6 +349,25 @@ int main() {
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <p>Игорь и Ира решили поехать на дачу, ведь там куча дел: прополоть и полить грядки, собрать урожай, окучить картошку и много-много всего.</p>
+
+  <p>Приехав на свой участок, они увидели, что их плохой сосед Т. передвинул забор и забрал кусок земли в виде треугольника. Игорь был возмущен данным событием и записал координаты вершин этого треугольника. Помогите Игорю посчитать площадь земли, которую захватил плохой сосед Т.</p>
+
+  <h4>Входные данные</h4>
+  <p>На вход дается три строки. В каждой строке записано 2 целых числа xᵢ, yᵢ (-10⁵ ≤ xᵢ, yᵢ ≤ 10⁵) - координаты вершин треугольника. Гарантируется, что треугольник невырожденный.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите одно вещественное число — площадь земли бессовестно занятой плохим соседом Т. с точностью до 6 знаков после запятой.</p>
+
+  <details>
+    <summary>Пример</summary>
+<pre>
+0 0
+0 1
+1 0
+</pre>
+    <code>0.50000000</code>
+  </details>
 </article>
 
 
@@ -321,6 +466,40 @@ int main() {
   <div><i>Ограничение по времени 2с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <p>После тяжёлого дня, выпив очередную кружку чая с валерианой, Дима Н. лёг спать. Ему снится сон: множество разноцветных прямых на ярко-чёрном фоне. Причём сон был вполне нормальным, никакие две прямые не совпадали.</p>
+
+  <p>На следующий день Дима пошёл к психиатру, а тот задал вполне корректный вопрос: какая прямая имеет минимальное количество пересечений с другими? Он не сумел найти ответ, и теперь его судьба печальна.</p>
+
+  <p>Не допустите его ошибку, найдите ответ заранее.</p>
+
+  <h4>Входные данные</h4>
+  <p>Первая строка содержит одно число N - количество прямых (1  ≤ N ≤ 10⁵). Следующие N строк содержат целые числа А и B, задающие одну прямую уравнением y = A * x + B (-10⁹ ≤ A, B ≤ 10⁹).</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите одно число – количество пересечений у искомой прямой.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+1 2
+1 3
+2 3
+</pre>
+    <code>1</code>
+
+    <h4>Пример 2</h4>
+<pre>
+5
+1 1
+1 2
+1 3
+2 2
+2 3
+</pre>
+    <code>2</code>
+  </details>
 </article>
 
 
@@ -332,6 +511,33 @@ int main() {
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <p>Дана последовательность, состоящая из символов двух типов. Эта последовательность должна быть преобразована в правильную скобочную последовательность путем последовательной замены всех символов по следующему правилу:</p>
+  <ul>
+    <li>выбираются два символа разного типа,</li>
+    <li>символ, стоящий в последовательности левее, заменяется на открывающую скобку,</li>
+    <li>символ, стоящий правее, — на закрывающую.</li>
+  </ul>
+
+  <p>Определите количество способов осуществить такое преобразование. Способы, отличающиеся только последовательностью замен, считаются одинаковыми.</p>
+
+  <p>Правильной скобочной последовательностью называется строка, состоящая из символов '(' и ')', определяющаяся следующим образом:</p>
+  <ul>
+    <li>пустая строка является правильной скобочной последовательностью;</li>
+    <li>если A – правильная скобочная последовательность, то строка (A) – также правильная скобочная последовательность;</li>
+    <li>если A и B – правильные скобочные последовательности, то строки AB и BA также являются правильными скобочными последовательностями.</li>
+  </ul>
+
+  <h4>Входные данные</h4>
+  <p>В единственной строке содержится непустая строка, состоящая из строчных букв «a», «b», длина которой от 1 до 100 букв включительно. Символ «a» обозначает символ первого типа, а символ «b» — символ второго типа.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите в отдельной строке одно целое число — ответ на задачу.</p>
+
+  <details>
+    <summary>Пример</summary>
+    <code>aabb</code>
+    <code>1</code>
+  </details>
 </article>
 
 
@@ -472,6 +678,51 @@ int main() {
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <p>Игорь закончил магистратуру, и, как порядочный студент, решил устроиться на работу по специальности в его любимом городе.</p>
+
+  <p>В любимом городе Игоря есть хорошие IT-компании: Accelcomp, Тензор, Akvelon, Fogsoft, Confirmit, Krista и многие другие.</p>
+
+  <p>У Игоря есть n друзей, которые тоже хотят устроиться на работу. Собравшись всей своей дружной компанией, ребята выбрали n+1 IT-компанию из своего родного города.</p>
+
+  <p>Игорь и его друзья хотят устроиться в разные компании, чтобы после испытательного срока поделиться впечатлением от работы в IT. Каждый друг Игоря, как и сам Игорь, высказали, хотят ли они работать в определенной компании. Сможете ли вы посчитать сколькими разными способами они смогут устроиться на работу?</p>
+
+  <h4>Входные данные</h4>
+  <p>В первой строке записано n (1 ≤ n &lt; 10) — количество друзей Игоря.</p>
+
+  <p>Следующие n+1 строк описывают предпочтения Игоря и его друзей. В строке с номером i содержится n+1 число k<sub>ij</sub> (1 ≤ i, j ≤ n+1). Если k<sub>ij</sub> = 0, то человек с номером i не хочет работать в компании с номером j, если же k<sub>ij</sub> = 1, то человек i хочет работать в компании j.</p>
+
+  <h4>Выходные данные</h4>
+  <p>В единственной строке выведите количество вариантов трудоустройства студентов с учетом их пожеланий.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+2
+1 1 1
+1 1 1
+1 1 1
+</pre>
+    <code>6</code>
+
+    <h4>Пример 2</h4>
+<pre>
+2
+1 1 0
+0 1 1
+0 0 1
+</pre>
+    <code>1</code>
+
+    <h4>Пример 3</h4>
+<pre>
+2
+1 1 0
+0 1 0
+1 0 0
+</pre>
+    <code>0</code>
+  </details>
 </article>
 
 
@@ -483,5 +734,65 @@ int main() {
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <p>Игорь подал документы в аспирантуру своего любимого ВУЗа и решил немного прогуляться в парке.</p>
+
+  <p>В парке растут n очень красивых деревьев, имеющих идеальную форму. Поскольку листовая крона деревьев очень густая, она не пропускает капли дождя. А сами листья при этом создают тень в виде круга, в центре которого расположен ствол дерева.</p>
+
+  <p>Гуляя по парку, Игорь, как истинный математик, решил записать в свой блокнот информацию о деревьях в виде координат центра и радиуса тени дерева. За начало координат Игорь решил взять один из углов прямоугольной автобусной остановки, а координатные оси расположил параллельно ее сторонам. Когда все данные уже были записаны в блокнот, а Игорь шел в сторону остановки, начался сильный дождь. Игорь хочет добраться до остановки, пробежав под дождем как можно меньшее расстояние.</p>
+
+  <p>Сможете ли вы определить это расстояние?</p>
+
+  <h4>Входные данные</h4>
+  <p>В первой строке записано два целых числа x₁, y₁ (-10⁵ ≤ x₁, y₁ ≤ 10⁵) — координаты вершины прямоугольной остановки, противоположной вершине, выбранной в качестве начала координат.</p>
+
+  <p>Во второй строке задано два целых числа x₂, y₂ (-10⁵ ≤ x₂, y₂ ≤ 10⁵) — координаты Игоря.</p>
+
+  <p>В третьей строке записано число n (1 ≤ n ≤ 103) — количество деревьев в парке.</p>
+
+  <p>В каждой из последующих n строк записано по три целых числа aᵢ bᵢ, rᵢ (-10⁵ ≤ aᵢ, bᵢ ≤ 10⁵, 1 ≤ rᵢ ≤ 10⁵) — координаты и радиус кроны i-го дерева.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите одно вещественное число с точностью до 4 знаков после запятой — минимальное расстояние, которое Игорю придется пройти под дождем.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+2 2
+10 10
+2
+8 8 1
+5 5 2
+</pre>
+    <code>5.31370850</code>
+
+    <h4>Пример 2</h4>
+<pre>
+2 2
+10 10
+4
+8 10 2
+4 10 2
+4 6 2
+4 2 2
+</pre>
+    <code>0.00000000</code>
+
+    <h4>Пример 3</h4>
+<pre>
+2 2
+10 10
+2
+8 8 1
+6 6 2
+</pre>
+    <code>5.48528137</code>
+  </details>
+  <p>Гарантируется, что</p>
+  <ul>
+    <li>не существует двух деревьев, стволы которых расположены в одной точке;</li>
+    <li>не существует дерева, расположенного внутри остановки;</li>
+    <li>Игорь находится вне остановки.</li>
+  </ul>
 </article>
 
