--- a/src/components/alg/alg-pract/codeforces/pages/elem-100219-Round1.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-100219-Round1.html
@@ -31,9 +31,11 @@
   <h4>Выходные данные</h4>
   <p>Выведите искомое количество плит.</p>
 
-  <h4>Пример</h4>
-  <code>6 6 4</code>
-  <code>4</code>
+  <details>
+    <summary>Пример</summary>
+    <code>6 6 4</code>
+    <code>4</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -120,7 +122,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n строк — каждая строка должна содержать обозначение ячейки в отличной форме записи.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2
 R23C55
@@ -130,6 +133,7 @@ BC23
 BC23
 R23C55
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -251,13 +255,15 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите искомую площадь с точностью не менее 6 знаков после точки. Гарантируется, в оптимальном многоугольнике будет не более 100 вершин.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 0.000000 0.000000
 1.000000 1.000000
 0.000000 1.000000
 </pre>
-  <code>1.00000000</code>
+    <code>1.00000000</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
