--- a/src/components/alg/alg-pract/codeforces/pages/elem-220417-Round784.html
+++ b/src/components/alg/alg-pract/codeforces/pages/elem-220417-Round784.html
@@ -141,8 +141,7 @@ int main() {
   <p>Для каждого набора входных данных выведите любое целое число, которое встречается в массиве хотя бы три раза, или -1, если такого числа нет.</p>
 
   <details>
-    <summary></summary>
-  <h4>Пример</h4>
+    <summary>Пример</summary>
 <pre>
 7
 1
