--- a/src/components/front/front-learned/pages/elem-day.html
+++ b/src/components/front/front-learned/pages/elem-day.html
@@ -2,6 +2,43 @@
 
 <ol reversed>
 
+  <li>2025.08.15 пт
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 454-480стр и закончить книгу
+  </li>
+
+  <li>2025.08.14 чт
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 386-454стр
+  </li>
+
+  <li>2025.08.13 ср
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 363-386стр
+  </li>
+
+  <li>2025.08.12 вт
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 336-363стр
+  </li>
+
+  <li>2025.08.11 пн
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 300-336стр
+  </li>
+
+  <li>2025.08.07 чт
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 244-300стр
+    <br>2. <strong>Курс</strong> <i>2018 Хирьянов - Курс молодого бойца МФТИ (Язык Си).</i> 37 уроков. Длительность 9ч 18м. Прошел весь
+  </li>
+
+  <li>2025.08.06 ср
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 214-244стр
+  </li>
+
+  <li>2025.08.05 вт
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 179-214стр
+  </li>
+
+  <li>2025.08.04 пн
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 147-179стр
+  </li>
+
   <li>2025.08.01 пт
     <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 118-147стр
   </li>
