--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp17.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp17.html
@@ -21,6 +21,7 @@
     <br><a href="#p2">Задача 1. Кузнечик</a>
     <br><a href="#p3">Задача 2. Сумма цифр</a>
     <br><a href="#p4">Задача 3. Задача из университета</a>
+    <br><a href="#p5">Задача 4. Хорошая строка из 0 и 1</a>
   </p>
   <p>
         <a href="#task1">Задача A. Миллиардная Функция Васи</a>
@@ -105,7 +106,7 @@
 
   <p>Сколько целых чисел длины n чья сумма цифр равняется k?</p>
   <p>Отмечу, что очень часто в таких задачах требуется вывести ответ по модулю, потому что ответ слишком большой, например 10⁹ + 7. Для удобства нам потребуется постоянно брать промежуточные вычисления по модулю.</p>
-  <code>(a1 + a2 + a3 + a4 + ... + an)%mod</code>
+  <code>(a1 + a2 + a3 + a4 + ... + an) % mod</code>
   <p>Это требуется, чтобы не пользоваться длинной арифметикой.</p>
   <p>Последовательно ответим на 5 вопросов ДП:</p>
   <ol>
@@ -115,6 +116,23 @@
     <li>Как обходить объект ДП? Классический обход слева направо сверху вниз.</li>
     <li>Где хранится ответ на задачу? Ответ хранится в DP[k][n].</li>
   </ol>
+<pre>
+vector&lt;vector&lt;long long &gt; &gt; DP(10*n, vector&lt;long long&gt; (n + 1));
+for (int i = 0; i &lt;= 9; i++) {
+  DP[i][1] = 1;
+}
+for (int j = 2; j &lt;= n; j++) {
+  for (int i = 0; i &lt; 10*n; i++) {
+    for (int m = 0; m &lt;= 9; m++) {
+      if (i - m >= 0) {
+        DP[i][j] += DP[i - m][j - 1];
+      }
+    }
+  }
+}
+
+cout &lt;&lt; DP[k][n];
+</pre>
 </article>
 
 
@@ -209,6 +227,27 @@ cout &lt;&lt; DP[str1.size()][str2.size()];
 </pre>
 
 <p>Самый главный минус классической реализации алгоритма Левенштейна - это необходимость создания двумерной матрицы. В первых реализациях собственного антиплагиата если текст участника был слишком большой посылка считалась перманентно не списанной в силу того, что ее нельзя было проверить.</p>
+</article>
+
+
+<!-- Задача 4. Хорошая строка из 0 и 1 -->
+<article class="article">
+  <div class="anchor" id="p5"></div>
+  <h3>Задача 4. Хорошая строка из 0 и 1</h3>
+
+  <p>Дана строка s, сотстоящая из нулей и единиц. И число k. Будем считать строку хорошей если число подряд идущих нулей в строке меньше k. Найти число строк s длины n, которые не содержат k подряд идущих нулей.</p>
+  <p>Создадим два вектора B(n) и W(n). B[i] хранит число строк длины i которые заканчиваются на 1. W[i] хранит число строк длины i, которые заканчиваются на 0.</p>
+  <p>Базовый случай: B[1] = 1, W[1] = 1</p>
+  <p>Если бы не было условия про k подряд идущих нулей, то вектора B и W собирались так: B[i] = B[i-1] + W[i-1], W[i] = B[i-1] + W[i-1]</p>
+  <p>Рассмотрим случай, когда k = 2, то есть нельзя допустить строку с двумя нулями подряд. Если мы хотим добавить в конец строки символ 1, то B[i] = B[i - 1] + W[i - 1]. Если мы хотим добавить в конец строки символ 0, то W[i] = B[i-1].</p>
+  <p>Рассмотрим случай, когда k = 3, n = 6, то есть нельзя допустить строку с тремя нулями подряд.</p>
+  <code>n = 1, B[1] = 1 (1), W[1] = 1 (0)</code>
+  <code>n = 2, B[2] = 2 (01,11), W[2] = 2 (00,10)</code>
+  <code>n = 3, B[3] = 4 (011,111,001,101), W[3] = 3 (010,110,100)</code>
+  <code>n = 4, B[4] = 7 (0111,1111,0011,1011,0101,1101,1001), B[4] = B[3] + W[3], W[4] = 6 (0110,1110,0010,1010,0100,1100), W[4] = B[3] + W[3] - B[1]</code>
+  <code>n = 5, B[5] = B[4] + W[4] = 13, W[5] = B[4] + W[4] - B[2]</code>
+  <p>Если мы хотим добавить в конец строки символ 1, то B[i] = B[i - 1] + W[i - 1]. Если мы хотим добавить в конец строки символ 0, то W[i] = B[i-1].</p>
+  <p>В общем случае, для k нулей, B[i] = B[i-1] + W[i-1], W[i] = B[i-1] + W[i-1] - B[i-k]</p>
 </article>
 
 
@@ -374,6 +413,59 @@ int main() {
     <summary>Пример</summary>
     <code>1</code>
     <code>10</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Для начала решим легкую задачу, подсчитаем число билетов, у которых сумму цифр равна k, а число цифр равно n.</p>
+
+    <h4>Динамика по слоям</h4>
+    <p>Заметим, что ответ в ячейке j зависит только от слоя j-1. Поэтому нам не нужно хранить всю матрицу DP, а достаточно только обновлять два последних ее слоя - слой j  и слой j-1. Это сэкономит память.</p>
+<pre>
+int n;
+cin >> n;
+long long mod = 1e9 + 7;
+vector&lt;long long&gt; A(1e4);
+vector&lt;long long&gt; B(1e4);
+vector&lt;long long&gt; C(1e4);
+
+// база
+A[0] = 1;
+
+for (int h = 1; h &lt;= n; h++) {
+  for (int i = 0; i &lt; 9900; i++) {
+    for (int j = 0; j &lt;= 9; j++) {
+      B[i+j] += A[i];
+    }
+  }
+  for (int i = 0; i &lt; A.size(); i++) {
+    A[1] = B[i] % mod;
+    B[i] = 0;
+  }
+}
+for (int i = 0; i &lt; 10000; i++) {
+  long long cnt = A[i];
+  long long z = 0, y = i;
+
+  while (y >= 10) {
+    while (y > 0) {
+      z += y % 10;
+      y /= 10;
+    }
+    y = z;
+    z = 0;
+  }
+
+  C[y] = (C[y] + cnt) % mod;
+}
+
+long long res = 0;
+for (int i = 0; i &lt; 10; i++) {
+  res = (res + C[i] * C[i]) % mod;
+}
+
+cout &lt;&lt; res;
+</pre>
   </details>
 </article>
 
