--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp28.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp28.html
@@ -278,9 +278,11 @@ new_a = ( cos(Θ) sin(Θ)) (x)
   <h4>Выходные данные</h4>
   <p>Одно число - величина ее полярного угла в радианах из интервала [0, 2pi]</p>
 
-  <h4>Пример</h4>
-  <code>2 3</code>
-  <code>0.98279</code>
+  <details>
+    <summary>Пример</summary>
+    <code>2 3</code>
+    <code>0.98279</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -339,9 +341,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одно число - величина неориентированного угла между ними с точностью до пятого знака после запятой из интервала [0, pi].</p>
 
-  <h4>Пример</h4>
-  <code>2 1 3 5</code>
-  <code>0.56673</code>
+  <details>
+    <summary>Пример</summary>
+    <code>2 1 3 5</code>
+    <code>0.56673</code>
+  </details>
 </article>
 
 
@@ -363,14 +367,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одно число - величина площади приведенного многоугольника.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 1 0
 0 1
 1 1
 </pre>
-  <code>0.5</code>
+    <code>0.5</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -434,9 +440,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одно число - величина площади треугольника.</p>
 
-  <h4>Пример</h4>
-  <code>1 0 2 4 5 2</code>
-  <code>7.0</code>
+  <details>
+    <summary>Пример</summary>
+    <code>1 0 2 4 5 2</code>
+    <code>7.0</code>
+  </details>
 </article>
 
 
@@ -459,9 +467,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Три числа - коэффиыиенты нормального уравнения биссектрисы угла YXZ.</p>
 
-  <h4>Пример</h4>
-  <code>1 1 1 0 0 1</code>
-  <code>-1.0 1.0 0.0</code>
+  <details>
+    <summary>Пример</summary>
+    <code>1 1 1 0 0 1</code>
+    <code>-1.0 1.0 0.0</code>
+  </details>
 </article>
 
 
@@ -484,9 +494,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одно число - расстояние от точки до прямой с точностью не менее 10⁻⁶</p>
 
-  <h4>Пример</h4>
-  <code>1 1 1 1 -1</code>
-  <code>0.70711</code>
+  <details>
+    <summary>Пример</summary>
+    <code>1 1 1 1 -1</code>
+    <code>0.70711</code>
+  </details>
 </article>
 
 
@@ -509,9 +521,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одно число - расстояние от точки до прямой с точностью не менее 10⁻⁶</p>
 
-  <h4>Пример</h4>
-  <code>1 1 0 0 2 0</code>
-  <code>1.00000</code>
+  <details>
+    <summary>Пример</summary>
+    <code>1 1 0 0 2 0</code>
+    <code>1.00000</code>
+  </details>
 </article>
 
 
@@ -534,9 +548,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одно число - расстояние от точки до луча, определяемого вектором, с точностью не менее 10⁻⁶</p>
 
-  <h4>Пример</h4>
-  <code>2 1 1 1 0 2</code>
-  <code>1.0</code>
+  <details>
+    <summary>Пример</summary>
+    <code>2 1 1 1 0 2</code>
+    <code>1.0</code>
+  </details>
 </article>
 
 
@@ -559,9 +575,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одно число - расстояние от точки до отрезка с точностью не менее 10⁻⁶</p>
 
-  <h4>Пример</h4>
-  <code>0 4 2 3 2 5</code>
-  <code>2.0</code>
+  <details>
+    <summary>Пример</summary>
+    <code>0 4 2 3 2 5</code>
+    <code>2.0</code>
+  </details>
 </article>
 
 
@@ -584,12 +602,14 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одно число - расстояние между отрезками с точностью не менее 10⁻⁶</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 1 1 2 2
 2 1 3 0
 </pre>
-  <code>0.7071067812</code>
+    <code>0.7071067812</code>
+  </details>
 </article>
 
 
@@ -610,9 +630,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Два числа - координаты точки их пересечения.</p>
 
-  <h4>Пример</h4>
-  <code>1 1 -1 1 -1 0</code>
-  <code>0.5 0.5</code>
+  <details>
+    <summary>Пример</summary>
+    <code>1 1 -1 1 -1 0</code>
+    <code>0.5 0.5</code>
+  </details>
 </article>
 
 
@@ -633,9 +655,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одно число - длина заданного вектора с точностью до шестого знака после запятой.</p>
 
-  <h4>Пример</h4>
-  <code>1 1 2 2</code>
-  <code>1.414214</code>
+  <details>
+    <summary>Пример</summary>
+    <code>1 1 2 2</code>
+    <code>1.414214</code>
+  </details>
 </article>
 
 
@@ -656,9 +680,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Три числа - коэффициенты A, B, C нормального уравнения этой прямой.</p>
 
-  <h4>Пример</h4>
-  <code>1 1 3 1</code>
-  <code>-1 -2 5</code>
+  <details>
+    <summary>Пример</summary>
+    <code>1 1 3 1</code>
+    <code>-1 -2 5</code>
+  </details>
 </article>
 
 
@@ -679,9 +705,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Три числа - коэффициенты A, B, C нормального уравнения этой прямой.</p>
 
-  <h4>Пример</h4>
-  <code>1 1 3 1</code>
-  <code>3 1 -5</code>
+  <details>
+    <summary>Пример</summary>
+    <code>1 1 3 1</code>
+    <code>3 1 -5</code>
+  </details>
 </article>
 
 
@@ -702,12 +730,14 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Шесть чисел - коэффициенты A, B, C нормального уравнения двух прямых, параллельных заданной и лежащих от нее на расстоянии R (R != 0), с точностью до шести знаков после запятой. Порядок прямых не важен.</p>
 
-  <h4>Пример</h4>
-  <code>0 -1 1 1</code>
+  <details>
+    <summary>Пример</summary>
+    <code>0 -1 1 1</code>
 <pre>
 0 -1 2
 0 -1 0
 </pre>
+  </details>
 </article>
 
 
@@ -728,9 +758,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одна строка YES, если точка принадлежит прямой, и NO в противном случае.</p>
 
-  <h4>Пример</h4>
-  <code>3 7 -2 1 -1</code>
-  <code>YES</code>
+  <details>
+    <summary>Пример</summary>
+    <code>3 7 -2 1 -1</code>
+    <code>YES</code>
+  </details>
 </article>
 
 
@@ -751,9 +783,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одна строка YES, если точка принадлежит лучу, определяемому вектором, и NO в противном случае.</p>
 
-  <h4>Пример</h4>
-  <code>1 6 3 7 5 8</code>
-  <code>NO</code>
+  <details>
+    <summary>Пример</summary>
+    <code>1 6 3 7 5 8</code>
+    <code>NO</code>
+  </details>
 </article>
 
 
@@ -774,9 +808,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одна строка YES, если точка принадлежит отрезку, и NO в противном случае.</p>
 
-  <h4>Пример</h4>
-  <code>3 3 1 2 5 4</code>
-  <code>YES</code>
+  <details>
+    <summary>Пример</summary>
+    <code>3 3 1 2 5 4</code>
+    <code>YES</code>
+  </details>
 </article>
 
 
@@ -797,9 +833,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одна строка YES, если точки лежат по одну сторону прямой, и NO в противном случае.</p>
 
-  <h4>Пример</h4>
-  <code>0 0 2 4 2 -1 -1</code>
-  <code>YES</code>
+  <details>
+    <summary>Пример</summary>
+    <code>0 0 2 4 2 -1 -1</code>
+    <code>YES</code>
+  </details>
 </article>
 
 
@@ -822,12 +860,14 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Вывести одно вещественное число с точностью до 5-го знака после запятой - искомое расстояние.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2 1 1 3
 0 1 4 -1
 </pre>
-  <code>0.89443</code>
+    <code>0.89443</code>
+  </details>
 </article>
 
 
@@ -847,40 +887,43 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Необходимо вывести слово «In», если точка находится внутри треугольника и «Out» в противном случае.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 0 0
 100 0
 0 100
 100 100
 </pre>
-  <code>Out</code>
+    <code>Out</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 0 0
 100 0
 0 100
 10 10
 </pre>
-  <code>In</code>
+    <code>In</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 0 0
 100 0
 0 100
 50 50
 </pre>
-  <code>In</code>
+    <code>In</code>
 
-  <h4>Пример 4</h4>
+    <h4>Пример 4</h4>
 <pre>
 0 0
 100 0
 0 100
 0 0
 </pre>
-  <code>In</code>
+    <code>In</code>
+  </details>
 </article>
 
