--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp29.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp29.html
@@ -242,7 +242,8 @@ for (int i = 0; i &lt; q; i++) {
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите единственное целое число — максимальное количество пересечений, при оптимальном расположении проводов.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 7
@@ -260,9 +261,10 @@ for (int i = 0; i &lt; q; i++) {
 0
 3
 </pre>
-  <p>Первый пример показан на втором рисунке в условии.</p>
-  <p>Во втором примере при единственно возможном соединении появляется пересечение двух проводов, поэтому ответ равен 1.</p>
-  <p>В третьем тестовом примере единственно возможное соединение состоит из одного провода, поэтому ответ равен 0.</p>
+    <p>Первый пример показан на втором рисунке в условии.</p>
+    <p>Во втором примере при единственно возможном соединении появляется пересечение двух проводов, поэтому ответ равен 1.</p>
+    <p>В третьем тестовом примере единственно возможное соединение состоит из одного провода, поэтому ответ равен 0.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -393,7 +395,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите единственное целое число — максимальное количество пересечений, при оптимальном расположении проводов.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 7
@@ -411,9 +414,10 @@ int main() {
 0
 3
 </pre>
-  <p>Первый пример показан на втором рисунке в условии.</p>
-  <p>Во втором примере при единственно возможном соединении появляется пересечение двух проводов, поэтому ответ равен 1.</p>
-  <p>В третьем тестовом примере единственно возможное соединение состоит из одного провода, поэтому ответ равен 0.</p>
+    <p>Первый пример показан на втором рисунке в условии.</p>
+    <p>Во втором примере при единственно возможном соединении появляется пересечение двух проводов, поэтому ответ равен 1.</p>
+    <p>В третьем тестовом примере единственно возможное соединение состоит из одного провода, поэтому ответ равен 0.</p>
+  </details>
 </article>
 
 
@@ -439,7 +443,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно число — количество вершин в максимальной клике образованного графа.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 2 3
@@ -447,10 +452,11 @@ int main() {
 6 1
 0 2
 </pre>
-  <code>3</code>
+    <code>3</code>
 
-  <p>Если вы вдруг умеете решать эту задачу, не используя специфические свойства графа, представленного в условии задачи, то вам полагается приз в миллион доллларов!</p>
-  <p>Изображение к тесту из условия:</p>
+    <p>Если вы вдруг умеете решать эту задачу, не используя специфические свойства графа, представленного в условии задачи, то вам полагается приз в миллион доллларов!</p>
+    <p>Изображение к тесту из условия:</p>
+  </details>
 </article>
 
 
@@ -480,7 +486,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите m целых неотрицательных чисел, где i-e число — ответ на i-й запрос.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3 3
 1 3
@@ -495,6 +502,7 @@ int main() {
 1
 0
 </pre>
+  </details>
 </article>
 
 
@@ -534,7 +542,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите ответы на запросы второго типа, в том порядке, в котором они заданы в тесте.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 5 8
@@ -568,14 +577,15 @@ int main() {
 1
 </pre>
 
-  <p>В первом наборе входных данных происходят следующие изменения:</p>
-  <ul>
-    <li>Изначально a=[1,420,69,1434,2023].</li>
-    <li>Операция применяется с l=2, r=3, получаем [1,6,15,1434,2023].</li>
-    <li>Запрошены значения с x=2, x=3, и x=4, выводим 6, 15, и 1434.</li>
-    <li>Операция применяется с l=2, r=5, получаем [1,6,6,12,7].</li>
-    <li>Запрошены значения с x=1, x=3, и x=5, выводим 1, 6, и 7.</li>
-  </ul>
+    <p>В первом наборе входных данных происходят следующие изменения:</p>
+    <ul>
+      <li>Изначально a=[1,420,69,1434,2023].</li>
+      <li>Операция применяется с l=2, r=3, получаем [1,6,15,1434,2023].</li>
+      <li>Запрошены значения с x=2, x=3, и x=4, выводим 6, 15, и 1434.</li>
+      <li>Операция применяется с l=2, r=5, получаем [1,6,6,12,7].</li>
+      <li>Запрошены значения с x=1, x=3, и x=5, выводим 1, 6, и 7.</li>
+    </ul>
+  </details>
 </article>
 
 
@@ -607,7 +617,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>На каждый запрос второго типа вам надо в отдельной строке вывести единственное число - суммарное количество легенд в задачах с номерами с L по R.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7 7
 + 3 5
@@ -623,6 +634,7 @@ int main() {
 5
 -4
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -804,7 +816,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>На каждый запрос первого типа вам надо вывести в отдельной строке единственное число - минимальное число на отрезке с L по R.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5 7
 2 5 6 5 2
@@ -822,6 +835,7 @@ int main() {
 2
 2
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -932,7 +946,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>На каждый запрос вида Q lr нужно вывести единственное число - сумму на отрезке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5 9
 A 2 2
@@ -953,6 +968,7 @@ Q 1 5
 0
 5
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1072,7 +1088,8 @@ int main() {
   <h4>Формат выходного файла</h4>
   <p>Для каждого запроса первого типа в выходной файл требуется вывести одну строку, содержащую разность между максимальным и минимальным значением на соответствующем отрезке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 1 3
@@ -1090,6 +1107,7 @@ int main() {
 234
 1
 </pre>
+  </details>
 </article>
 
 
@@ -1113,7 +1131,9 @@ int main() {
   <p>Если искомого массива не существует, выведите строку "inconsistent".</p>
   <p>В противном случае в первую строку выходного файла выведите "consistent". Во вторую строку выведите элементы массива. Элементами массива должны быть целые числа в интервале от -2³¹ до 2³¹-1 включительно. Если решений несколько, выведите любое.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 2
 1 2 1
@@ -1124,7 +1144,7 @@ consistent
 1 2 3
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 3
 1 2 1
@@ -1134,6 +1154,7 @@ consistent
 <pre>
 inconsistent
 </pre>
+  </details>
 </article>
 
 
@@ -1159,7 +1180,8 @@ inconsistent
   <h4>Формат выходного файла</h4>
   <p>Для каждого студента выведите одно натуральное число - номер парты, которую он займет.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 5
@@ -1176,6 +1198,7 @@ inconsistent
 6
 8
 </pre>
+  </details>
 
   <details>
     <summary>Решение через дерево отрезков</summary>
@@ -1341,7 +1364,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n целых чисел  — росты воинов армии Шакти в шеренге по окончанию всех q перестановок.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5 3
 1 2 3 4 5
@@ -1350,6 +1374,7 @@ int main() {
 1 5
 </pre>
   <code>4 5 3 2 1 </code>
+  </details>
 </article>
 
 
@@ -1408,7 +1433,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого запроса s выведите результат. Все числа выводите в одну строку через пробел.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 2 8 4 16 12
@@ -1419,7 +1445,8 @@ u 3 32
 s 2 5
 s 3 3
 </pre>
-  <code>2 4 4 32</code>
+    <code>2 4 4 32</code>
+  </details>
 </article>
 
 
@@ -1439,13 +1466,15 @@ s 3 3
   <h4>Выходные данные</h4>
   <p>На каждый запрос ? нужно вывести порядковый номер к-той еденицы. По одному запросу на строчку. Если к-той еденицы нет, следует вывести 0.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3 3
 ! 1
 ! 3
 ? 2
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 </article>
 
