--- a/src/components/alg/alg-conspect/yargu3/pages/elem-240114-Blitz2024w2.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-240114-Blitz2024w2.html
@@ -32,6 +32,58 @@
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;map&gt;
+
+using namespace std;
+
+int main() {
+// условная компиляция
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  // число тестов
+  int t;
+  cin >> t;
+
+  while (t--) {
+    // ввод данных
+    int n; // число дней
+    cin >> n;
+    string s;
+    cin >> s;
+
+    // решение
+    bool res = true;
+    map&lt;char, int&gt; mp;
+    for (int i = 0; i &lt; n; i++) {
+      if (mp.find(s[i]) == mp.end()) {
+        mp.insert(pair(s[i], 1));
+      } else {
+        if (s[i] == s[i - 1]) {
+          mp[s[i]]++;
+        } else {
+          res = false;
+          break;
+        }
+      }
+    }
+
+    // вывод результата
+    if (res) {
+      cout &lt;&lt; "YES\n";
+    } else {
+      cout &lt;&lt; "NO\n";
+    }
+  }
+}
+</pre>
+  </details>
 </article>
 
 
