--- a/src/components/alg/alg-conspect/yargu3/pages/elem-241229-NY2025.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-241229-NY2025.html
@@ -242,6 +242,53 @@ int main() {
 </pre>
   <code>NO</code>
   </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+
+  // условная компиляция
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  // ввод данных
+  long long n; // число отрядов
+  long long z; // урон молнией первому отряду
+  cin >> n >> z;
+  vector&lt;long long&gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i]; // здоровье отряда
+  }
+
+  // решение
+  sort(A.begin(), A.end());
+  bool flag = true;
+
+  for (int i = n - 1; i >= 0; i--) {
+    if (A[i] > z) {
+      flag = false;
+    }
+    z /= 2;
+  }
+
+  // вывод результата
+  if (flag) {
+    cout &lt;&lt; "YES";
+  } else {
+    cout &lt;&lt; "NO";
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -282,6 +329,41 @@ int main() {
   <h4>Пример 4</h4>
   <code>25</code>
   <code>3</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;cmath&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  long long n; // число кубиков
+  cin >> n;
+
+  // решение
+  long long res = 0;
+  long long sq = sqrt(n);
+
+  // находим целочисленные делители
+  for (long long i = 1; i &lt; sq; i++) {
+    if (n % i == 0) {
+      res += 2;
+    }
+  }
+
+  // если n это квадрат числа
+  if (sq == sqrt(n)) {
+    res++;
+  }
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
   </details>
 </article>
 
